refactor: update trading strategies documentation to unify background styles and update color schemes for better consistency and readability.

--- a/trading/analysis/fundamental-analysis.mdx
+++ b/trading/analysis/fundamental-analysis.mdx
@@ -11,7 +11,7 @@ icon: 'building'
   <span>Last updated: December 2024 by Quoc Doan</span>
 </div>
 
-<Card title="🏢 What is Fundamental Analysis?" icon="magnifying-glass" color="#059669">
+<Card title=" What is Fundamental Analysis?" icon="magnifying-glass" color="#6b7280">
   Fundamental analysis evaluates a company's intrinsic value by examining financial statements, business model, competitive advantages, and economic factors.
 </Card>
 
@@ -92,19 +92,19 @@ icon: 'building'
       </Info>
 
       <CardGroup cols={3}>
-        <Card title="Operating Cash Flow" icon="gear" color="#10b981">
+        <Card title="Operating Cash Flow" icon="gear" color="#6b7280">
           Cash from core business operations
 
           **Key Metric**: Should be positive and growing
         </Card>
 
-        <Card title="Investing Cash Flow" icon="trending-up" color="#3b82f6">
+        <Card title="Investing Cash Flow" icon="trending-up" color="#6b7280">
           Cash used for investments in assets
 
           **Usually Negative**: Companies investing in growth
         </Card>
 
-        <Card title="Financing Cash Flow" icon="banknotes" color="#8b5cf6">
+        <Card title="Financing Cash Flow" icon="banknotes" color="#6b7280">
           Cash from debt, equity, dividends
 
           **Can be Positive/Negative**: Depends on funding needs
@@ -241,7 +241,7 @@ icon: 'building'
 
 ## Competitive Analysis
 
-<Card title="Porter's Five Forces" icon="shield" color="#6366f1">
+<Card title="Porter's Five Forces" icon="shield" color="#6b7280">
   Framework for analyzing competitive dynamics and industry attractiveness.
 </Card>
 
@@ -389,28 +389,28 @@ intrinsic_value = dcf_valuation(projected_fcf, terminal_growth, discount_rate)
 </Warning>
 
 <CardGroup cols={2}>
-  <Card title="Accounting Red Flags" icon="exclamation-triangle" color="#dc2626">
+  <Card title="Accounting Red Flags" icon="exclamation-triangle" color="#6b7280">
     - Frequent auditor changes
     - Aggressive revenue recognition
     - Growing gap between earnings and cash flow
     - Off-balance sheet liabilities
   </Card>
 
-  <Card title="Business Red Flags" icon="building-exclamation" color="#ea580c">
+  <Card title="Business Red Flags" icon="building-exclamation" color="#6b7280">
     - Declining market share
     - Heavy dependence on few customers
     - Excessive management turnover
     - Insider selling at high levels
   </Card>
 
-  <Card title="Financial Red Flags" icon="chart-line-down" color="#dc2626">
+  <Card title="Financial Red Flags" icon="chart-line-down" color="#6b7280">
     - Deteriorating margins
     - Increasing debt-to-equity ratio
     - Negative working capital trends
     - Dividend cuts or suspensions
   </Card>
 
-  <Card title="Market Red Flags" icon="trending-down" color="#b91c1c">
+  <Card title="Market Red Flags" icon="trending-down" color="#6b7280">
     - Loss of competitive advantages
     - Regulatory challenges
     - Technology disruption
