--- a/trading/investment-tools.mdx
+++ b/trading/investment-tools.mdx
@@ -13,9 +13,9 @@ icon: 'calculator'
 
 ## Compound Interest Calculator
 
-<div className="bg-gradient-to-br from-indigo-50 via-purple-50 to-pink-50 dark:from-indigo-900/20 dark:via-purple-900/20 dark:to-pink-900/20 p-8 rounded-xl border border-indigo-200 dark:border-indigo-800 my-8">
+<div className="bg-gray-50 dark:bg-slate-900 p-8 rounded-xl border border-gray-200 dark:border-slate-800 my-8">
   <div className="text-center mb-6">
-    <h3 className="text-2xl font-bold text-slate-800 dark:text-slate-200 mb-2">🧮 Investment Growth Calculator</h3>
+    <h3 className="text-2xl font-bold text-slate-800 dark:text-slate-200 mb-2">Investment Growth Calculator</h3>
     <p className="text-slate-600 dark:text-slate-400">See how your investments can grow with compound returns</p>
   </div>
 
@@ -33,7 +33,7 @@ icon: 'calculator'
               </div>
               <input
                 type="number"
-                className="w-full pl-8 pr-4 py-3 border border-slate-300 dark:border-slate-600 rounded-lg bg-white dark:bg-slate-800 text-slate-900 dark:text-slate-100 focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 transition-colors"
+                className="w-full pl-8 pr-4 py-3 border border-slate-300 dark:border-slate-600 rounded-lg bg-white dark:bg-slate-800 text-slate-900 dark:text-slate-100 focus:ring-2 focus:ring-gray-500 focus:border-gray-500 transition-colors"
                 placeholder="10,000"
                 defaultValue="10000"
               />
@@ -48,7 +48,7 @@ icon: 'calculator'
               </div>
               <input
                 type="number"
-                className="w-full pl-8 pr-4 py-3 border border-slate-300 dark:border-slate-600 rounded-lg bg-white dark:bg-slate-800 text-slate-900 dark:text-slate-100 focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 transition-colors"
+                className="w-full pl-8 pr-4 py-3 border border-slate-300 dark:border-slate-600 rounded-lg bg-white dark:bg-slate-800 text-slate-900 dark:text-slate-100 focus:ring-2 focus:ring-gray-500 focus:border-gray-500 transition-colors"
                 placeholder="500"
                 defaultValue="500"
               />
@@ -60,7 +60,7 @@ icon: 'calculator'
             <div className="relative">
               <input
                 type="number"
-                className="w-full pl-4 pr-10 py-3 border border-slate-300 dark:border-slate-600 rounded-lg bg-white dark:bg-slate-800 text-slate-900 dark:text-slate-100 focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 transition-colors"
+                className="w-full pl-4 pr-10 py-3 border border-slate-300 dark:border-slate-600 rounded-lg bg-white dark:bg-slate-800 text-slate-900 dark:text-slate-100 focus:ring-2 focus:ring-gray-500 focus:border-gray-500 transition-colors"
                 placeholder="8"
                 defaultValue="8"
               />
@@ -75,7 +75,7 @@ icon: 'calculator'
             <div className="relative">
               <input
                 type="number"
-                className="w-full pl-4 pr-16 py-3 border border-slate-300 dark:border-slate-600 rounded-lg bg-white dark:bg-slate-800 text-slate-900 dark:text-slate-100 focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 transition-colors"
+                className="w-full pl-4 pr-16 py-3 border border-slate-300 dark:border-slate-600 rounded-lg bg-white dark:bg-slate-800 text-slate-900 dark:text-slate-100 focus:ring-2 focus:ring-gray-500 focus:border-gray-500 transition-colors"
                 placeholder="20"
                 defaultValue="20"
               />
@@ -92,20 +92,20 @@ icon: 'calculator'
       <h4 className="font-semibold text-slate-800 dark:text-slate-200 mb-4">Projected Results</h4>
 
       <div className="space-y-4">
-        <div className="flex justify-between items-center p-4 bg-blue-50 dark:bg-blue-900/30 rounded-lg border border-blue-200 dark:border-blue-800">
+        <div className="flex justify-between items-center p-4 bg-gray-50 dark:bg-gray-900/30 rounded-lg border border-gray-200 dark:border-gray-800">
           <span className="text-slate-700 dark:text-slate-300">Total Contributions</span>
-          <span className="font-bold text-blue-600 dark:text-blue-400 text-lg">$130,000</span>
+          <span className="font-bold text-gray-600 dark:text-gray-400 text-lg">$130,000</span>
         </div>
 
-        <div className="flex justify-between items-center p-4 bg-emerald-50 dark:bg-emerald-900/30 rounded-lg border border-emerald-200 dark:border-emerald-800">
+        <div className="flex justify-between items-center p-4 bg-gray-50 dark:bg-gray-900/30 rounded-lg border border-gray-200 dark:border-gray-800">
           <span className="text-slate-700 dark:text-slate-300">Investment Growth</span>
-          <span className="font-bold text-emerald-600 dark:text-emerald-400 text-lg">$240,876</span>
+          <span className="font-bold text-gray-600 dark:text-gray-400 text-lg">$240,876</span>
         </div>
 
-        <div className="p-4 bg-gradient-to-r from-purple-50 to-pink-50 dark:from-purple-900/30 dark:to-pink-900/30 rounded-lg border border-purple-200 dark:border-purple-800">
+        <div className="p-4 bg-gradient-to-r bg-gray-50 dark:from-purple-900/30 dark:to-pink-900/30 rounded-lg border border-gray-200 dark:border-gray-800">
           <div className="flex justify-between items-center">
             <span className="text-slate-800 dark:text-slate-200 font-semibold">Final Balance</span>
-            <span className="font-bold text-purple-600 dark:text-purple-400 text-2xl">$370,876</span>
+            <span className="font-bold text-gray-600 dark:text-gray-400 text-2xl">$370,876</span>
           </div>
         </div>
 
@@ -127,7 +127,7 @@ icon: 'calculator'
 
 <div className="bg-white dark:bg-slate-900 border border-slate-200 dark:border-slate-700 rounded-xl p-8 my-8 shadow-sm">
   <div className="text-center mb-6">
-    <h3 className="text-2xl font-bold text-slate-800 dark:text-slate-200 mb-2">📋 Investment Risk Profile</h3>
+    <h3 className="text-2xl font-bold text-slate-800 dark:text-slate-200 mb-2">Investment Risk Profile</h3>
     <p className="text-slate-600 dark:text-slate-400">Discover your optimal investment strategy based on your risk tolerance</p>
   </div>
 
@@ -136,24 +136,24 @@ icon: 'calculator'
       <h4 className="font-semibold text-slate-800 dark:text-slate-200 mb-4">1. What's your investment timeline?</h4>
       <div className="space-y-3">
         <label className="flex items-center p-3 rounded-lg border border-slate-200 dark:border-slate-600 hover:bg-white dark:hover:bg-slate-700 cursor-pointer transition-colors">
-          <input type="radio" name="timeline" className="w-4 h-4 text-indigo-600 focus:ring-indigo-500 border-slate-300 dark:border-slate-500" />
+          <input type="radio" name="timeline" className="w-4 h-4 text-gray-600 focus:ring-gray-500 border-slate-300 dark:border-slate-500" />
           <div className="ml-3 flex items-center justify-between w-full">
             <span className="text-slate-700 dark:text-slate-300">Less than 5 years</span>
-            <span className="text-sm px-2 py-1 bg-emerald-100 dark:bg-emerald-900/30 text-emerald-700 dark:text-emerald-300 rounded-full">Conservative</span>
+            <span className="text-sm px-2 py-1 bg-gray-100 dark:bg-gray-900/30 text-gray-700 dark:text-gray-300 rounded-full">Conservative</span>
           </div>
         </label>
         <label className="flex items-center p-3 rounded-lg border border-slate-200 dark:border-slate-600 hover:bg-white dark:hover:bg-slate-700 cursor-pointer transition-colors">
-          <input type="radio" name="timeline" className="w-4 h-4 text-indigo-600 focus:ring-indigo-500 border-slate-300 dark:border-slate-500" />
+          <input type="radio" name="timeline" className="w-4 h-4 text-gray-600 focus:ring-gray-500 border-slate-300 dark:border-slate-500" />
           <div className="ml-3 flex items-center justify-between w-full">
             <span className="text-slate-700 dark:text-slate-300">5-15 years</span>
-            <span className="text-sm px-2 py-1 bg-amber-100 dark:bg-amber-900/30 text-amber-700 dark:text-amber-300 rounded-full">Moderate</span>
+            <span className="text-sm px-2 py-1 bg-gray-100 dark:bg-gray-900/30 text-gray-700 dark:text-gray-300 rounded-full">Moderate</span>
           </div>
         </label>
         <label className="flex items-center p-3 rounded-lg border border-slate-200 dark:border-slate-600 hover:bg-white dark:hover:bg-slate-700 cursor-pointer transition-colors">
-          <input type="radio" name="timeline" className="w-4 h-4 text-indigo-600 focus:ring-indigo-500 border-slate-300 dark:border-slate-500" />
+          <input type="radio" name="timeline" className="w-4 h-4 text-gray-600 focus:ring-gray-500 border-slate-300 dark:border-slate-500" />
           <div className="ml-3 flex items-center justify-between w-full">
             <span className="text-slate-700 dark:text-slate-300">15+ years</span>
-            <span className="text-sm px-2 py-1 bg-purple-100 dark:bg-purple-900/30 text-purple-700 dark:text-purple-300 rounded-full">Aggressive</span>
+            <span className="text-sm px-2 py-1 bg-gray-100 dark:bg-gray-900/30 text-gray-700 dark:text-gray-300 rounded-full">Aggressive</span>
           </div>
         </label>
       </div>
@@ -163,21 +163,21 @@ icon: 'calculator'
       <h4 className="font-semibold text-slate-800 dark:text-slate-200 mb-4">2. If your portfolio dropped 20% in a month, you would:</h4>
       <div className="space-y-3">
         <label className="flex items-center p-3 rounded-lg border border-slate-200 dark:border-slate-600 hover:bg-white dark:hover:bg-slate-700 cursor-pointer transition-colors">
-          <input type="radio" name="reaction" className="w-4 h-4 text-indigo-600 focus:ring-indigo-500 border-slate-300 dark:border-slate-500" />
+          <input type="radio" name="reaction" className="w-4 h-4 text-gray-600 focus:ring-gray-500 border-slate-300 dark:border-slate-500" />
           <div className="ml-3">
             <span className="text-slate-700 dark:text-slate-300">Sell everything immediately</span>
             <div className="text-sm text-slate-500 dark:text-slate-400 mt-1">Risk-averse approach</div>
           </div>
         </label>
         <label className="flex items-center p-3 rounded-lg border border-slate-200 dark:border-slate-600 hover:bg-white dark:hover:bg-slate-700 cursor-pointer transition-colors">
-          <input type="radio" name="reaction" className="w-4 h-4 text-indigo-600 focus:ring-indigo-500 border-slate-300 dark:border-slate-500" />
+          <input type="radio" name="reaction" className="w-4 h-4 text-gray-600 focus:ring-gray-500 border-slate-300 dark:border-slate-500" />
           <div className="ml-3">
             <span className="text-slate-700 dark:text-slate-300">Hold and wait for recovery</span>
             <div className="text-sm text-slate-500 dark:text-slate-400 mt-1">Balanced approach</div>
           </div>
         </label>
         <label className="flex items-center p-3 rounded-lg border border-slate-200 dark:border-slate-600 hover:bg-white dark:hover:bg-slate-700 cursor-pointer transition-colors">
-          <input type="radio" name="reaction" className="w-4 h-4 text-indigo-600 focus:ring-indigo-500 border-slate-300 dark:border-slate-500" />
+          <input type="radio" name="reaction" className="w-4 h-4 text-gray-600 focus:ring-gray-500 border-slate-300 dark:border-slate-500" />
           <div className="ml-3">
             <span className="text-slate-700 dark:text-slate-300">Buy more at lower prices</span>
             <div className="text-sm text-slate-500 dark:text-slate-400 mt-1">Opportunistic approach</div>
@@ -190,21 +190,21 @@ icon: 'calculator'
       <h4 className="font-semibold text-slate-800 dark:text-slate-200 mb-4">3. Your primary investment goal is:</h4>
       <div className="space-y-3">
         <label className="flex items-center p-3 rounded-lg border border-slate-200 dark:border-slate-600 hover:bg-white dark:hover:bg-slate-700 cursor-pointer transition-colors">
-          <input type="radio" name="goal" className="w-4 h-4 text-indigo-600 focus:ring-indigo-500 border-slate-300 dark:border-slate-500" />
+          <input type="radio" name="goal" className="w-4 h-4 text-gray-600 focus:ring-gray-500 border-slate-300 dark:border-slate-500" />
           <div className="ml-3">
             <span className="text-slate-700 dark:text-slate-300">Preserve capital and generate income</span>
             <div className="text-sm text-slate-500 dark:text-slate-400 mt-1">Focus on stability and dividends</div>
           </div>
         </label>
         <label className="flex items-center p-3 rounded-lg border border-slate-200 dark:border-slate-600 hover:bg-white dark:hover:bg-slate-700 cursor-pointer transition-colors">
-          <input type="radio" name="goal" className="w-4 h-4 text-indigo-600 focus:ring-indigo-500 border-slate-300 dark:border-slate-500" />
+          <input type="radio" name="goal" className="w-4 h-4 text-gray-600 focus:ring-gray-500 border-slate-300 dark:border-slate-500" />
           <div className="ml-3">
             <span className="text-slate-700 dark:text-slate-300">Balanced growth and income</span>
             <div className="text-sm text-slate-500 dark:text-slate-400 mt-1">Mix of growth and dividend stocks</div>
           </div>
         </label>
         <label className="flex items-center p-3 rounded-lg border border-slate-200 dark:border-slate-600 hover:bg-white dark:hover:bg-slate-700 cursor-pointer transition-colors">
-          <input type="radio" name="goal" className="w-4 h-4 text-indigo-600 focus:ring-indigo-500 border-slate-300 dark:border-slate-500" />
+          <input type="radio" name="goal" className="w-4 h-4 text-gray-600 focus:ring-gray-500 border-slate-300 dark:border-slate-500" />
           <div className="ml-3">
             <span className="text-slate-700 dark:text-slate-300">Maximum long-term growth</span>
             <div className="text-sm text-slate-500 dark:text-slate-400 mt-1">Growth stocks and emerging markets</div>
@@ -224,91 +224,91 @@ icon: 'calculator'
 ## Portfolio Allocation Recommendations
 
 <div className="grid grid-cols-1 md:grid-cols-3 gap-6 my-8">
-  <div className="bg-gradient-to-br from-emerald-50 to-teal-50 dark:from-emerald-900/20 dark:to-teal-900/20 border border-emerald-200 dark:border-emerald-800 rounded-xl p-6">
+  <div className="bg-gray-50">
     <div className="text-center mb-4">
-      <div className="w-12 h-12 bg-emerald-500 rounded-xl flex items-center justify-center mx-auto mb-3">
+      <div className="w-12 h-12 bg-gray-500 rounded-xl flex items-center justify-center mx-auto mb-3">
         <svg className="w-6 h-6 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
           <path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M9 12l2 2 4-4m5.618-4.016A11.955 11.955 0 0112 2.944a11.955 11.955 0 01-8.618 3.04A12.02 12.02 0 003 9c0 5.591 3.824 10.29 9 11.622 5.176-1.332 9-6.03 9-11.622 0-1.042-.133-2.052-.382-3.016z" />
         </svg>
       </div>
-      <h3 className="font-bold text-emerald-800 dark:text-emerald-200">Conservative</h3>
-      <p className="text-sm text-emerald-600 dark:text-emerald-400">Low Risk • 6-7% Expected Return</p>
+      <h3 className="font-bold text-gray-800 dark:text-gray-200">Conservative</h3>
+      <p className="text-sm text-gray-600 dark:text-gray-400">Low Risk • 6-7% Expected Return</p>
     </div>
 
     <div className="space-y-3">
       <div className="flex justify-between items-center">
-        <span className="text-sm text-emerald-700 dark:text-emerald-300">Bonds</span>
-        <span className="font-semibold text-emerald-600 dark:text-emerald-400">60%</span>
+        <span className="text-sm text-gray-700 dark:text-gray-300">Bonds</span>
+        <span className="font-semibold text-gray-600 dark:text-gray-400">60%</span>
       </div>
       <div className="flex justify-between items-center">
-        <span className="text-sm text-emerald-700 dark:text-emerald-300">Large Cap Stocks</span>
-        <span className="font-semibold text-emerald-600 dark:text-emerald-400">30%</span>
+        <span className="text-sm text-gray-700 dark:text-gray-300">Large Cap Stocks</span>
+        <span className="font-semibold text-gray-600 dark:text-gray-400">30%</span>
       </div>
       <div className="flex justify-between items-center">
-        <span className="text-sm text-emerald-700 dark:text-emerald-300">REITs</span>
-        <span className="font-semibold text-emerald-600 dark:text-emerald-400">10%</span>
+        <span className="text-sm text-gray-700 dark:text-gray-300">REITs</span>
+        <span className="font-semibold text-gray-600 dark:text-gray-400">10%</span>
       </div>
     </div>
   </div>
 
-  <div className="bg-gradient-to-br from-amber-50 to-orange-50 dark:from-amber-900/20 dark:to-orange-900/20 border border-amber-200 dark:border-amber-800 rounded-xl p-6">
+  <div className="bg-gray-50">
     <div className="text-center mb-4">
-      <div className="w-12 h-12 bg-amber-500 rounded-xl flex items-center justify-center mx-auto mb-3">
+      <div className="w-12 h-12 bg-gray-500 rounded-xl flex items-center justify-center mx-auto mb-3">
         <svg className="w-6 h-6 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
           <path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M3 6l3 1m0 0l-3 9a5.002 5.002 0 006.001 0M6 7l3 9M6 7l6-2m6 2l3-1m-3 1l-3 9a5.002 5.002 0 006.001 0M18 7l3 9m-3-9l-6-2m0-2v2m0 16V5m0 16H9m3 0h3" />
         </svg>
       </div>
-      <h3 className="font-bold text-amber-800 dark:text-amber-200">Moderate</h3>
-      <p className="text-sm text-amber-600 dark:text-amber-400">Medium Risk • 8-9% Expected Return</p>
+      <h3 className="font-bold text-gray-800 dark:text-gray-200">Moderate</h3>
+      <p className="text-sm text-gray-600 dark:text-gray-400">Medium Risk • 8-9% Expected Return</p>
     </div>
 
     <div className="space-y-3">
       <div className="flex justify-between items-center">
-        <span className="text-sm text-amber-700 dark:text-amber-300">Mixed Stocks</span>
-        <span className="font-semibold text-amber-600 dark:text-amber-400">60%</span>
+        <span className="text-sm text-gray-700 dark:text-gray-300">Mixed Stocks</span>
+        <span className="font-semibold text-gray-600 dark:text-gray-400">60%</span>
       </div>
       <div className="flex justify-between items-center">
-        <span className="text-sm text-amber-700 dark:text-amber-300">Bonds</span>
-        <span className="font-semibold text-amber-600 dark:text-amber-400">30%</span>
+        <span className="text-sm text-gray-700 dark:text-gray-300">Bonds</span>
+        <span className="font-semibold text-gray-600 dark:text-gray-400">30%</span>
       </div>
       <div className="flex justify-between items-center">
-        <span className="text-sm text-amber-700 dark:text-amber-300">REITs</span>
-        <span className="font-semibold text-amber-600 dark:text-amber-400">7%</span>
+        <span className="text-sm text-gray-700 dark:text-gray-300">REITs</span>
+        <span className="font-semibold text-gray-600 dark:text-gray-400">7%</span>
       </div>
       <div className="flex justify-between items-center">
-        <span className="text-sm text-amber-700 dark:text-amber-300">Commodities</span>
-        <span className="font-semibold text-amber-600 dark:text-amber-400">3%</span>
+        <span className="text-sm text-gray-700 dark:text-gray-300">Commodities</span>
+        <span className="font-semibold text-gray-600 dark:text-gray-400">3%</span>
       </div>
     </div>
   </div>
 
-  <div className="bg-gradient-to-br from-purple-50 to-pink-50 dark:from-purple-900/20 dark:to-pink-900/20 border border-purple-200 dark:border-purple-800 rounded-xl p-6">
+  <div className="bg-gray-50">
     <div className="text-center mb-4">
-      <div className="w-12 h-12 bg-purple-500 rounded-xl flex items-center justify-center mx-auto mb-3">
+      <div className="w-12 h-12 bg-gray-500 rounded-xl flex items-center justify-center mx-auto mb-3">
         <svg className="w-6 h-6 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
           <path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M13 10V3L4 14h7v7l9-11h-7z" />
         </svg>
       </div>
-      <h3 className="font-bold text-purple-800 dark:text-purple-200">Aggressive</h3>
-      <p className="text-sm text-purple-600 dark:text-purple-400">High Risk • 10-12% Expected Return</p>
+      <h3 className="font-bold text-gray-800 dark:text-gray-200">Aggressive</h3>
+      <p className="text-sm text-gray-600 dark:text-gray-400">High Risk • 10-12% Expected Return</p>
     </div>
 
     <div className="space-y-3">
       <div className="flex justify-between items-center">
-        <span className="text-sm text-purple-700 dark:text-purple-300">Growth Stocks</span>
-        <span className="font-semibold text-purple-600 dark:text-purple-400">70%</span>
+        <span className="text-sm text-gray-700 dark:text-gray-300">Growth Stocks</span>
+        <span className="font-semibold text-gray-600 dark:text-gray-400">70%</span>
       </div>
       <div className="flex justify-between items-center">
-        <span className="text-sm text-purple-700 dark:text-purple-300">International</span>
-        <span className="font-semibold text-purple-600 dark:text-purple-400">15%</span>
+        <span className="text-sm text-gray-700 dark:text-gray-300">International</span>
+        <span className="font-semibold text-gray-600 dark:text-gray-400">15%</span>
       </div>
       <div className="flex justify-between items-center">
-        <span className="text-sm text-purple-700 dark:text-purple-300">Bonds</span>
-        <span className="font-semibold text-purple-600 dark:text-purple-400">10%</span>
+        <span className="text-sm text-gray-700 dark:text-gray-300">Bonds</span>
+        <span className="font-semibold text-gray-600 dark:text-gray-400">10%</span>
       </div>
       <div className="flex justify-between items-center">
-        <span className="text-sm text-purple-700 dark:text-purple-300">Alternatives</span>
-        <span className="font-semibold text-purple-600 dark:text-purple-400">5%</span>
+        <span className="text-sm text-gray-700 dark:text-gray-300">Alternatives</span>
+        <span className="font-semibold text-gray-600 dark:text-gray-400">5%</span>
       </div>
     </div>
   </div>
