--- a/trading/markets/stock-exchanges.mdx
+++ b/trading/markets/stock-exchanges.mdx
@@ -26,9 +26,9 @@ icon: 'building-office'
 
 ## What is a Stock Exchange?
 
-<div className="bg-gradient-to-br from-blue-50 via-indigo-50 to-purple-50 dark:from-blue-900/20 dark:via-indigo-900/20 dark:to-purple-900/20 p-6 rounded-xl border border-blue-200 dark:border-blue-800 my-8">
+<div className="bg-gray-50">
   <div className="flex items-center gap-4 mb-4">
-    <div className="w-12 h-12 bg-gradient-to-br from-blue-500 to-purple-500 rounded-xl flex items-center justify-center">
+    <div className="w-12 h-12 bg-gray-50">
       <span className="text-white text-2xl">🏛️</span>
     </div>
     <div>
@@ -44,126 +44,126 @@ icon: 'building-office'
 ## Major US Stock Exchanges
 
 <div className="grid grid-cols-1 md:grid-cols-2 gap-6 my-8">
-  <div className="bg-gradient-to-br from-blue-50 to-indigo-50 dark:from-blue-900/20 dark:to-indigo-900/20 p-6 rounded-xl border border-blue-200 dark:border-blue-800">
+  <div className="bg-gray-50">
     <div className="flex items-center gap-3 mb-4">
-      <div className="w-12 h-12 bg-blue-500 rounded-xl flex items-center justify-center">
+      <div className="w-12 h-12 bg-gray-500 rounded-xl flex items-center justify-center">
         <span className="text-white text-xl font-bold">NYSE</span>
       </div>
       <div>
-        <h4 className="text-xl font-bold text-blue-900 dark:text-blue-100">New York Stock Exchange</h4>
-        <p className="text-blue-700 dark:text-blue-300 text-sm">The Big Board</p>
+        <h4 className="text-xl font-bold text-gray-900 dark:text-gray-100">New York Stock Exchange</h4>
+        <p className="text-gray-700 dark:text-gray-300 text-sm">The Big Board</p>
       </div>
     </div>
 
     <div className="space-y-4">
-      <div className="bg-white/70 dark:bg-slate-800/70 p-4 rounded-lg border border-blue-200 dark:border-blue-700">
+      <div className="bg-white/70 dark:bg-slate-800/70 p-4 rounded-lg border border-gray-200 dark:border-gray-700">
         <div className="grid grid-cols-2 gap-4 text-sm">
           <div>
-            <div className="text-blue-800 dark:text-blue-200 font-semibold mb-1">Founded</div>
-            <div className="text-blue-600 dark:text-blue-400">1792</div>
+            <div className="text-gray-800 dark:text-gray-200 font-semibold mb-1">Founded</div>
+            <div className="text-gray-600 dark:text-gray-400">1792</div>
           </div>
           <div>
-            <div className="text-blue-800 dark:text-blue-200 font-semibold mb-1">Market Cap</div>
-            <div className="text-blue-600 dark:text-blue-400">$26+ Trillion</div>
+            <div className="text-gray-800 dark:text-gray-200 font-semibold mb-1">Market Cap</div>
+            <div className="text-gray-600 dark:text-gray-400">$26+ Trillion</div>
           </div>
           <div>
-            <div className="text-blue-800 dark:text-blue-200 font-semibold mb-1">Listed Companies</div>
-            <div className="text-blue-600 dark:text-blue-400">2,400+</div>
+            <div className="text-gray-800 dark:text-gray-200 font-semibold mb-1">Listed Companies</div>
+            <div className="text-gray-600 dark:text-gray-400">2,400+</div>
           </div>
           <div>
-            <div className="text-blue-800 dark:text-blue-200 font-semibold mb-1">Trading Hours</div>
-            <div className="text-blue-600 dark:text-blue-400">9:30 AM - 4:00 PM ET</div>
+            <div className="text-gray-800 dark:text-gray-200 font-semibold mb-1">Trading Hours</div>
+            <div className="text-gray-600 dark:text-gray-400">9:30 AM - 4:00 PM ET</div>
           </div>
         </div>
       </div>
 
       <div className="space-y-2">
-        <div className="text-xs font-semibold text-blue-800 dark:text-blue-200 mb-2">Notable Features:</div>
-        <div className="space-y-1 text-xs text-blue-700 dark:text-blue-300">
+        <div className="text-xs font-semibold text-gray-800 dark:text-gray-200 mb-2">Notable Features:</div>
+        <div className="space-y-1 text-xs text-gray-700 dark:text-gray-300">
           <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-blue-500 rounded-full"></div>
+            <div className="w-1 h-1 bg-gray-500 rounded-full"></div>
             <span>Largest stock exchange globally</span>
           </div>
           <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-blue-500 rounded-full"></div>
+            <div className="w-1 h-1 bg-gray-500 rounded-full"></div>
             <span>Home to blue-chip stocks (IBM, Coca-Cola)</span>
           </div>
           <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-blue-500 rounded-full"></div>
+            <div className="w-1 h-1 bg-gray-500 rounded-full"></div>
             <span>Hybrid trading (floor + electronic)</span>
           </div>
           <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-blue-500 rounded-full"></div>
+            <div className="w-1 h-1 bg-gray-500 rounded-full"></div>
             <span>Strict listing requirements</span>
           </div>
         </div>
       </div>
 
-      <div className="bg-blue-100 dark:bg-blue-900/30 p-3 rounded-lg">
-        <div className="text-xs text-blue-800 dark:text-blue-200 font-semibold mb-1">Major Indices:</div>
-        <div className="text-xs text-blue-700 dark:text-blue-300">Dow Jones Industrial Average (DJIA), S&P 500</div>
+      <div className="bg-gray-100 dark:bg-gray-900/30 p-3 rounded-lg">
+        <div className="text-xs text-gray-800 dark:text-gray-200 font-semibold mb-1">Major Indices:</div>
+        <div className="text-xs text-gray-700 dark:text-gray-300">Dow Jones Industrial Average (DJIA), S&P 500</div>
       </div>
     </div>
   </div>
 
-  <div className="bg-gradient-to-br from-purple-50 to-pink-50 dark:from-purple-900/20 dark:to-pink-900/20 p-6 rounded-xl border border-purple-200 dark:border-purple-800">
+  <div className="bg-gray-50">
     <div className="flex items-center gap-3 mb-4">
-      <div className="w-12 h-12 bg-purple-500 rounded-xl flex items-center justify-center">
+      <div className="w-12 h-12 bg-gray-500 rounded-xl flex items-center justify-center">
         <span className="text-white text-lg font-bold">NASDAQ</span>
       </div>
       <div>
-        <h4 className="text-xl font-bold text-purple-900 dark:text-purple-100">NASDAQ</h4>
-        <p className="text-purple-700 dark:text-purple-300 text-sm">Tech-Heavy Exchange</p>
+        <h4 className="text-xl font-bold text-gray-900 dark:text-gray-100">NASDAQ</h4>
+        <p className="text-gray-700 dark:text-gray-300 text-sm">Tech-Heavy Exchange</p>
       </div>
     </div>
 
     <div className="space-y-4">
-      <div className="bg-white/70 dark:bg-slate-800/70 p-4 rounded-lg border border-purple-200 dark:border-purple-700">
+      <div className="bg-white/70 dark:bg-slate-800/70 p-4 rounded-lg border border-gray-200 dark:border-gray-700">
         <div className="grid grid-cols-2 gap-4 text-sm">
           <div>
-            <div className="text-purple-800 dark:text-purple-200 font-semibold mb-1">Founded</div>
-            <div className="text-purple-600 dark:text-purple-400">1971</div>
+            <div className="text-gray-800 dark:text-gray-200 font-semibold mb-1">Founded</div>
+            <div className="text-gray-600 dark:text-gray-400">1971</div>
           </div>
           <div>
-            <div className="text-purple-800 dark:text-purple-200 font-semibold mb-1">Market Cap</div>
-            <div className="text-purple-600 dark:text-purple-400">$20+ Trillion</div>
+            <div className="text-gray-800 dark:text-gray-200 font-semibold mb-1">Market Cap</div>
+            <div className="text-gray-600 dark:text-gray-400">$20+ Trillion</div>
           </div>
           <div>
-            <div className="text-purple-800 dark:text-purple-200 font-semibold mb-1">Listed Companies</div>
-            <div className="text-purple-600 dark:text-purple-400">3,500+</div>
+            <div className="text-gray-800 dark:text-gray-200 font-semibold mb-1">Listed Companies</div>
+            <div className="text-gray-600 dark:text-gray-400">3,500+</div>
           </div>
           <div>
-            <div className="text-purple-800 dark:text-purple-200 font-semibold mb-1">Trading Hours</div>
-            <div className="text-purple-600 dark:text-purple-400">9:30 AM - 4:00 PM ET</div>
+            <div className="text-gray-800 dark:text-gray-200 font-semibold mb-1">Trading Hours</div>
+            <div className="text-gray-600 dark:text-gray-400">9:30 AM - 4:00 PM ET</div>
           </div>
         </div>
       </div>
 
       <div className="space-y-2">
-        <div className="text-xs font-semibold text-purple-800 dark:text-purple-200 mb-2">Notable Features:</div>
-        <div className="space-y-1 text-xs text-purple-700 dark:text-purple-300">
+        <div className="text-xs font-semibold text-gray-800 dark:text-gray-200 mb-2">Notable Features:</div>
+        <div className="space-y-1 text-xs text-gray-700 dark:text-gray-300">
           <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-purple-500 rounded-full"></div>
+            <div className="w-1 h-1 bg-gray-500 rounded-full"></div>
             <span>First electronic stock exchange</span>
           </div>
           <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-purple-500 rounded-full"></div>
+            <div className="w-1 h-1 bg-gray-500 rounded-full"></div>
             <span>Tech giants (Apple, Microsoft, Google)</span>
           </div>
           <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-purple-500 rounded-full"></div>
+            <div className="w-1 h-1 bg-gray-500 rounded-full"></div>
             <span>Fully electronic trading</span>
           </div>
           <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-purple-500 rounded-full"></div>
+            <div className="w-1 h-1 bg-gray-500 rounded-full"></div>
             <span>Lower listing requirements</span>
           </div>
         </div>
       </div>
 
-      <div className="bg-purple-100 dark:bg-purple-900/30 p-3 rounded-lg">
-        <div className="text-xs text-purple-800 dark:text-purple-200 font-semibold mb-1">Major Indices:</div>
-        <div className="text-xs text-purple-700 dark:text-purple-300">NASDAQ Composite, NASDAQ-100, QQQ ETF</div>
+      <div className="bg-gray-100 dark:bg-gray-900/30 p-3 rounded-lg">
+        <div className="text-xs text-gray-800 dark:text-gray-200 font-semibold mb-1">Major Indices:</div>
+        <div className="text-xs text-gray-700 dark:text-gray-300">NASDAQ Composite, NASDAQ-100, QQQ ETF</div>
       </div>
     </div>
   </div>
@@ -171,9 +171,9 @@ icon: 'building-office'
 
 ## S&P 500 Index Deep Dive
 
-<div className="bg-gradient-to-br from-emerald-50 to-teal-50 dark:from-emerald-900/20 dark:to-teal-900/20 p-8 rounded-xl border border-emerald-200 dark:border-emerald-800 my-8">
+<div className="bg-gray-50">
   <div className="text-center mb-6">
-    <div className="w-16 h-16 bg-emerald-500 rounded-xl flex items-center justify-center mx-auto mb-4">
+    <div className="w-16 h-16 bg-gray-500 rounded-xl flex items-center justify-center mx-auto mb-4">
       <span className="text-white text-2xl font-bold">500</span>
     </div>
     <h3 className="text-2xl font-bold text-slate-800 dark:text-slate-200 mb-2">S&P 500 Index</h3>
@@ -181,9 +181,9 @@ icon: 'building-office'
   </div>
 
   <div className="grid grid-cols-1 md:grid-cols-3 gap-6">
-    <div className="bg-white/70 dark:bg-slate-800/70 p-5 rounded-xl border border-emerald-200 dark:border-emerald-700">
-      <h4 className="font-bold text-emerald-900 dark:text-emerald-100 mb-3">📊 Index Composition</h4>
-      <div className="space-y-2 text-sm text-emerald-800 dark:text-emerald-200">
+    <div className="bg-white/70 dark:bg-slate-800/70 p-5 rounded-xl border border-gray-200 dark:border-gray-700">
+      <h4 className="font-bold text-gray-900 dark:text-gray-100 mb-3"> Index Composition</h4>
+      <div className="space-y-2 text-sm text-gray-800 dark:text-gray-200">
         <div className="flex justify-between">
           <span>Technology:</span>
           <span className="font-bold">28.5%</span>
@@ -207,9 +207,9 @@ icon: 'building-office'
       </div>
     </div>
 
-    <div className="bg-white/70 dark:bg-slate-800/70 p-5 rounded-xl border border-emerald-200 dark:border-emerald-700">
-      <h4 className="font-bold text-emerald-900 dark:text-emerald-100 mb-3">🏆 Top Holdings</h4>
-      <div className="space-y-2 text-sm text-emerald-800 dark:text-emerald-200">
+    <div className="bg-white/70 dark:bg-slate-800/70 p-5 rounded-xl border border-gray-200 dark:border-gray-700">
+      <h4 className="font-bold text-gray-900 dark:text-gray-100 mb-3"> Top Holdings</h4>
+      <div className="space-y-2 text-sm text-gray-800 dark:text-gray-200">
         <div className="flex justify-between">
           <span>Apple (AAPL):</span>
           <span className="font-bold">7.2%</span>
@@ -233,36 +233,36 @@ icon: 'building-office'
       </div>
     </div>
 
-    <div className="bg-white/70 dark:bg-slate-800/70 p-5 rounded-xl border border-emerald-200 dark:border-emerald-700">
-      <h4 className="font-bold text-emerald-900 dark:text-emerald-100 mb-3">📈 Historical Performance</h4>
-      <div className="space-y-2 text-sm text-emerald-800 dark:text-emerald-200">
+    <div className="bg-white/70 dark:bg-slate-800/70 p-5 rounded-xl border border-gray-200 dark:border-gray-700">
+      <h4 className="font-bold text-gray-900 dark:text-gray-100 mb-3"> Historical Performance</h4>
+      <div className="space-y-2 text-sm text-gray-800 dark:text-gray-200">
         <div className="flex justify-between">
           <span>1-Year Return:</span>
-          <span className="font-bold text-emerald-600">+12.3%</span>
+          <span className="font-bold text-gray-600">+12.3%</span>
         </div>
         <div className="flex justify-between">
           <span>5-Year Avg:</span>
-          <span className="font-bold text-emerald-600">+10.1%</span>
+          <span className="font-bold text-gray-600">+10.1%</span>
         </div>
         <div className="flex justify-between">
           <span>10-Year Avg:</span>
-          <span className="font-bold text-emerald-600">+11.2%</span>
+          <span className="font-bold text-gray-600">+11.2%</span>
         </div>
         <div className="flex justify-between">
           <span>Since 1957:</span>
-          <span className="font-bold text-emerald-600">+10.5%</span>
+          <span className="font-bold text-gray-600">+10.5%</span>
         </div>
         <div className="flex justify-between">
           <span>Best Year (1975):</span>
-          <span className="font-bold text-emerald-600">+37.2%</span>
+          <span className="font-bold text-gray-600">+37.2%</span>
         </div>
       </div>
     </div>
   </div>
 
-  <div className="mt-6 bg-emerald-100 dark:bg-emerald-900/30 p-4 rounded-lg">
-    <div className="text-sm font-medium text-emerald-800 dark:text-emerald-200 mb-2">Key Facts:</div>
-    <div className="grid grid-cols-1 md:grid-cols-2 gap-4 text-xs text-emerald-700 dark:text-emerald-300">
+  <div className="mt-6 bg-gray-100 dark:bg-gray-900/30 p-4 rounded-lg">
+    <div className="text-sm font-medium text-gray-800 dark:text-gray-200 mb-2">Key Facts:</div>
+    <div className="grid grid-cols-1 md:grid-cols-2 gap-4 text-xs text-gray-700 dark:text-gray-300">
       <div>• Market cap weighted index</div>
       <div>• Rebalanced quarterly</div>
       <div>• Tracks 500 largest US companies</div>
@@ -273,9 +273,9 @@ icon: 'building-office'
 
 ## Vietnam Stock Exchanges
 
-<div className="bg-gradient-to-br from-red-50 via-orange-50 to-yellow-50 dark:from-red-900/20 dark:via-orange-900/20 dark:to-yellow-900/20 p-8 rounded-xl border border-red-200 dark:border-red-800 my-8">
+<div className="bg-gray-50">
   <div className="text-center mb-6">
-    <div className="w-16 h-16 bg-red-500 rounded-xl flex items-center justify-center mx-auto mb-4">
+    <div className="w-16 h-16 bg-gray-500 rounded-xl flex items-center justify-center mx-auto mb-4">
       <span className="text-white text-xl">🇻🇳</span>
     </div>
     <h3 className="text-2xl font-bold text-slate-800 dark:text-slate-200 mb-2">Vietnamese Stock Markets</h3>
@@ -283,94 +283,94 @@ icon: 'building-office'
   </div>
 
   <div className="grid grid-cols-1 md:grid-cols-2 gap-6">
-    <div className="bg-white/70 dark:bg-slate-800/70 p-6 rounded-xl border border-red-200 dark:border-red-700">
+    <div className="bg-white/70 dark:bg-slate-800/70 p-6 rounded-xl border border-gray-200 dark:border-gray-700">
       <div className="flex items-center gap-3 mb-4">
-        <div className="w-10 h-10 bg-red-500 rounded-lg flex items-center justify-center">
+        <div className="w-10 h-10 bg-gray-500 rounded-lg flex items-center justify-center">
           <span className="text-white text-lg font-bold">HoSE</span>
         </div>
-        <h4 className="font-bold text-red-900 dark:text-red-100">Ho Chi Minh Stock Exchange</h4>
+        <h4 className="font-bold text-gray-900 dark:text-gray-100">Ho Chi Minh Stock Exchange</h4>
       </div>
 
       <div className="space-y-3">
-        <div className="bg-red-50 dark:bg-red-900/30 p-3 rounded-lg">
+        <div className="bg-gray-50 dark:bg-gray-900/30 p-3 rounded-lg">
           <div className="grid grid-cols-2 gap-2 text-xs">
             <div>
-              <div className="text-red-800 dark:text-red-200 font-semibold mb-1">Established</div>
-              <div className="text-red-600 dark:text-red-400">2000</div>
+              <div className="text-gray-800 dark:text-gray-200 font-semibold mb-1">Established</div>
+              <div className="text-gray-600 dark:text-gray-400">2000</div>
             </div>
             <div>
-              <div className="text-red-800 dark:text-red-200 font-semibold mb-1">Listed Companies</div>
-              <div className="text-red-600 dark:text-red-400">400+</div>
+              <div className="text-gray-800 dark:text-gray-200 font-semibold mb-1">Listed Companies</div>
+              <div className="text-gray-600 dark:text-gray-400">400+</div>
             </div>
             <div>
-              <div className="text-red-800 dark:text-red-200 font-semibold mb-1">Market Cap</div>
-              <div className="text-red-600 dark:text-red-400">$180B+</div>
+              <div className="text-gray-800 dark:text-gray-200 font-semibold mb-1">Market Cap</div>
+              <div className="text-gray-600 dark:text-gray-400">$180B+</div>
             </div>
             <div>
-              <div className="text-red-800 dark:text-red-200 font-semibold mb-1">Main Index</div>
-              <div className="text-red-600 dark:text-red-400">VN-Index</div>
+              <div className="text-gray-800 dark:text-gray-200 font-semibold mb-1">Main Index</div>
+              <div className="text-gray-600 dark:text-gray-400">VN-Index</div>
             </div>
           </div>
         </div>
 
-        <div className="space-y-1 text-xs text-red-700 dark:text-red-300">
+        <div className="space-y-1 text-xs text-gray-700 dark:text-gray-300">
           <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-red-500 rounded-full"></div>
+            <div className="w-1 h-1 bg-gray-500 rounded-full"></div>
             <span>Large-cap stocks (Blue chips)</span>
           </div>
           <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-red-500 rounded-full"></div>
+            <div className="w-1 h-1 bg-gray-500 rounded-full"></div>
             <span>Banking, real estate, manufacturing</span>
           </div>
           <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-red-500 rounded-full"></div>
+            <div className="w-1 h-1 bg-gray-500 rounded-full"></div>
             <span>T+2 settlement cycle</span>
           </div>
         </div>
       </div>
     </div>
 
-    <div className="bg-white/70 dark:bg-slate-800/70 p-6 rounded-xl border border-orange-200 dark:border-orange-700">
+    <div className="bg-white/70 dark:bg-slate-800/70 p-6 rounded-xl border border-gray-200 dark:border-gray-700">
       <div className="flex items-center gap-3 mb-4">
-        <div className="w-10 h-10 bg-orange-500 rounded-lg flex items-center justify-center">
+        <div className="w-10 h-10 bg-gray-500 rounded-lg flex items-center justify-center">
           <span className="text-white text-lg font-bold">HNX</span>
         </div>
-        <h4 className="font-bold text-orange-900 dark:text-orange-100">Hanoi Stock Exchange</h4>
+        <h4 className="font-bold text-gray-900 dark:text-gray-100">Hanoi Stock Exchange</h4>
       </div>
 
       <div className="space-y-3">
-        <div className="bg-orange-50 dark:bg-orange-900/30 p-3 rounded-lg">
+        <div className="bg-gray-50 dark:bg-gray-900/30 p-3 rounded-lg">
           <div className="grid grid-cols-2 gap-2 text-xs">
             <div>
-              <div className="text-orange-800 dark:text-orange-200 font-semibold mb-1">Established</div>
-              <div className="text-orange-600 dark:text-orange-400">2005</div>
+              <div className="text-gray-800 dark:text-gray-200 font-semibold mb-1">Established</div>
+              <div className="text-gray-600 dark:text-gray-400">2005</div>
             </div>
             <div>
-              <div className="text-orange-800 dark:text-orange-200 font-semibold mb-1">Listed Companies</div>
-              <div className="text-orange-600 dark:text-orange-400">400+</div>
+              <div className="text-gray-800 dark:text-gray-200 font-semibold mb-1">Listed Companies</div>
+              <div className="text-gray-600 dark:text-gray-400">400+</div>
             </div>
             <div>
-              <div className="text-orange-800 dark:text-orange-200 font-semibold mb-1">Market Cap</div>
-              <div className="text-orange-600 dark:text-orange-400">$20B+</div>
+              <div className="text-gray-800 dark:text-gray-200 font-semibold mb-1">Market Cap</div>
+              <div className="text-gray-600 dark:text-gray-400">$20B+</div>
             </div>
             <div>
-              <div className="text-orange-800 dark:text-orange-200 font-semibold mb-1">Main Index</div>
-              <div className="text-orange-600 dark:text-orange-400">HNX-Index</div>
+              <div className="text-gray-800 dark:text-gray-200 font-semibold mb-1">Main Index</div>
+              <div className="text-gray-600 dark:text-gray-400">HNX-Index</div>
             </div>
           </div>
         </div>
 
-        <div className="space-y-1 text-xs text-orange-700 dark:text-orange-300">
+        <div className="space-y-1 text-xs text-gray-700 dark:text-gray-300">
           <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-orange-500 rounded-full"></div>
+            <div className="w-1 h-1 bg-gray-500 rounded-full"></div>
             <span>Small to mid-cap stocks</span>
           </div>
           <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-orange-500 rounded-full"></div>
+            <div className="w-1 h-1 bg-gray-500 rounded-full"></div>
             <span>Government bonds trading</span>
           </div>
           <div className="flex items-center gap-2">
-            <div className="w-1 h-1 bg-orange-500 rounded-full"></div>
+            <div className="w-1 h-1 bg-gray-500 rounded-full"></div>
             <span>UPCoM market for unlisted companies</span>
           </div>
         </div>
@@ -379,35 +379,35 @@ icon: 'building-office'
   </div>
 
   <div className="mt-6">
-    <h4 className="font-bold text-slate-800 dark:text-slate-200 mb-4">🏆 Top Vietnamese Stocks (VN-Index)</h4>
-    <div className="bg-white/70 dark:bg-slate-800/70 p-4 rounded-lg border border-red-200 dark:border-red-700">
+    <h4 className="font-bold text-slate-800 dark:text-slate-200 mb-4"> Top Vietnamese Stocks (VN-Index)</h4>
+    <div className="bg-white/70 dark:bg-slate-800/70 p-4 rounded-lg border border-gray-200 dark:border-gray-700">
       <div className="grid grid-cols-1 md:grid-cols-2 gap-4 text-sm">
         <div className="space-y-2">
           <div className="flex justify-between">
             <span className="text-slate-700 dark:text-slate-300">Vinhomes (VHM):</span>
-            <span className="font-bold text-red-600 dark:text-red-400">Real Estate</span>
+            <span className="font-bold text-gray-600 dark:text-gray-400">Real Estate</span>
           </div>
           <div className="flex justify-between">
             <span className="text-slate-700 dark:text-slate-300">Vingroup (VIC):</span>
-            <span className="font-bold text-red-600 dark:text-red-400">Conglomerate</span>
+            <span className="font-bold text-gray-600 dark:text-gray-400">Conglomerate</span>
           </div>
           <div className="flex justify-between">
             <span className="text-slate-700 dark:text-slate-300">Bank for Investment (CTG):</span>
-            <span className="font-bold text-red-600 dark:text-red-400">Banking</span>
+            <span className="font-bold text-gray-600 dark:text-gray-400">Banking</span>
           </div>
         </div>
         <div className="space-y-2">
           <div className="flex justify-between">
             <span className="text-slate-700 dark:text-slate-300">Vietcombank (VCB):</span>
-            <span className="font-bold text-red-600 dark:text-red-400">Banking</span>
+            <span className="font-bold text-gray-600 dark:text-gray-400">Banking</span>
           </div>
           <div className="flex justify-between">
             <span className="text-slate-700 dark:text-slate-300">Bidv Bank (BID):</span>
-            <span className="font-bold text-red-600 dark:text-red-400">Banking</span>
+            <span className="font-bold text-gray-600 dark:text-gray-400">Banking</span>
           </div>
           <div className="flex justify-between">
             <span className="text-slate-700 dark:text-slate-300">Masan Group (MSN):</span>
-            <span className="font-bold text-red-600 dark:text-red-400">Consumer Goods</span>
+            <span className="font-bold text-gray-600 dark:text-gray-400">Consumer Goods</span>
           </div>
         </div>
       </div>
@@ -418,15 +418,15 @@ icon: 'building-office'
 ## Other Major Global Exchanges
 
 <div className="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 my-8">
-  <div className="bg-gradient-to-br from-blue-50 to-sky-50 dark:from-blue-900/20 dark:to-sky-900/20 p-6 rounded-xl border border-blue-200 dark:border-blue-800">
+  <div className="bg-gray-50">
     <div className="flex items-center gap-3 mb-4">
-      <div className="w-10 h-10 bg-blue-500 rounded-lg flex items-center justify-center">
+      <div className="w-10 h-10 bg-gray-500 rounded-lg flex items-center justify-center">
         <span className="text-white text-lg">🇬🇧</span>
       </div>
-      <h4 className="font-bold text-blue-900 dark:text-blue-100">London Stock Exchange</h4>
+      <h4 className="font-bold text-gray-900 dark:text-gray-100">London Stock Exchange</h4>
     </div>
 
-    <div className="space-y-2 text-sm text-blue-800 dark:text-blue-200">
+    <div className="space-y-2 text-sm text-gray-800 dark:text-gray-200">
       <div className="flex justify-between">
         <span>Market Cap:</span>
         <span className="font-bold">$4.0T</span>
@@ -442,15 +442,15 @@ icon: 'building-office'
     </div>
   </div>
 
-  <div className="bg-gradient-to-br from-red-50 to-rose-50 dark:from-red-900/20 dark:to-rose-900/20 p-6 rounded-xl border border-red-200 dark:border-red-800">
+  <div className="bg-gray-50">
     <div className="flex items-center gap-3 mb-4">
-      <div className="w-10 h-10 bg-red-500 rounded-lg flex items-center justify-center">
+      <div className="w-10 h-10 bg-gray-500 rounded-lg flex items-center justify-center">
         <span className="text-white text-lg">🇯🇵</span>
       </div>
-      <h4 className="font-bold text-red-900 dark:text-red-100">Tokyo Stock Exchange</h4>
+      <h4 className="font-bold text-gray-900 dark:text-gray-100">Tokyo Stock Exchange</h4>
     </div>
 
-    <div className="space-y-2 text-sm text-red-800 dark:text-red-200">
+    <div className="space-y-2 text-sm text-gray-800 dark:text-gray-200">
       <div className="flex justify-between">
         <span>Market Cap:</span>
         <span className="font-bold">$5.4T</span>
@@ -466,15 +466,15 @@ icon: 'building-office'
     </div>
   </div>
 
-  <div className="bg-gradient-to-br from-green-50 to-emerald-50 dark:from-green-900/20 dark:to-emerald-900/20 p-6 rounded-xl border border-green-200 dark:border-green-800">
+  <div className="bg-gray-50">
     <div className="flex items-center gap-3 mb-4">
-      <div className="w-10 h-10 bg-green-500 rounded-lg flex items-center justify-center">
+      <div className="w-10 h-10 bg-gray-500 rounded-lg flex items-center justify-center">
         <span className="text-white text-lg">🇨🇳</span>
       </div>
-      <h4 className="font-bold text-green-900 dark:text-green-100">Shanghai Stock Exchange</h4>
+      <h4 className="font-bold text-gray-900 dark:text-gray-100">Shanghai Stock Exchange</h4>
     </div>
 
-    <div className="space-y-2 text-sm text-green-800 dark:text-green-200">
+    <div className="space-y-2 text-sm text-gray-800 dark:text-gray-200">
       <div className="flex justify-between">
         <span>Market Cap:</span>
         <span className="font-bold">$6.9T</span>
@@ -490,15 +490,15 @@ icon: 'building-office'
     </div>
   </div>
 
-  <div className="bg-gradient-to-br from-orange-50 to-amber-50 dark:from-orange-900/20 dark:to-amber-900/20 p-6 rounded-xl border border-orange-200 dark:border-orange-800">
+  <div className="bg-gray-50">
     <div className="flex items-center gap-3 mb-4">
-      <div className="w-10 h-10 bg-orange-500 rounded-lg flex items-center justify-center">
-        <span className="text-white text-lg">🇩🇪</span>
+      <div className="w-10 h-10 bg-gray-500 rounded-lg flex items-center justify-center">
+        <span className="text-white text-lg">🇩</span>
       </div>
-      <h4 className="font-bold text-orange-900 dark:text-orange-100">Frankfurt Stock Exchange</h4>
+      <h4 className="font-bold text-gray-900 dark:text-gray-100">Frankfurt Stock Exchange</h4>
     </div>
 
-    <div className="space-y-2 text-sm text-orange-800 dark:text-orange-200">
+    <div className="space-y-2 text-sm text-gray-800 dark:text-gray-200">
       <div className="flex justify-between">
         <span>Market Cap:</span>
         <span className="font-bold">$2.3T</span>
@@ -514,15 +514,15 @@ icon: 'building-office'
     </div>
   </div>
 
-  <div className="bg-gradient-to-br from-purple-50 to-pink-50 dark:from-purple-900/20 dark:to-pink-900/20 p-6 rounded-xl border border-purple-200 dark:border-purple-800">
+  <div className="bg-gray-50">
     <div className="flex items-center gap-3 mb-4">
-      <div className="w-10 h-10 bg-purple-500 rounded-lg flex items-center justify-center">
+      <div className="w-10 h-10 bg-gray-500 rounded-lg flex items-center justify-center">
         <span className="text-white text-lg">🇰🇷</span>
       </div>
-      <h4 className="font-bold text-purple-900 dark:text-purple-100">Korea Exchange</h4>
+      <h4 className="font-bold text-gray-900 dark:text-gray-100">Korea Exchange</h4>
     </div>
 
-    <div className="space-y-2 text-sm text-purple-800 dark:text-purple-200">
+    <div className="space-y-2 text-sm text-gray-800 dark:text-gray-200">
       <div className="flex justify-between">
         <span>Market Cap:</span>
         <span className="font-bold">$2.2T</span>
@@ -538,15 +538,15 @@ icon: 'building-office'
     </div>
   </div>
 
-  <div className="bg-gradient-to-br from-teal-50 to-cyan-50 dark:from-teal-900/20 dark:to-cyan-900/20 p-6 rounded-xl border border-teal-200 dark:border-teal-800">
+  <div className="bg-gray-50">
     <div className="flex items-center gap-3 mb-4">
-      <div className="w-10 h-10 bg-teal-500 rounded-lg flex items-center justify-center">
+      <div className="w-10 h-10 bg-gray-500 rounded-lg flex items-center justify-center">
         <span className="text-white text-lg">🇮🇳</span>
       </div>
-      <h4 className="font-bold text-teal-900 dark:text-teal-100">Bombay Stock Exchange</h4>
+      <h4 className="font-bold text-gray-900 dark:text-gray-100">Bombay Stock Exchange</h4>
     </div>
 
-    <div className="space-y-2 text-sm text-teal-800 dark:text-teal-200">
+    <div className="space-y-2 text-sm text-gray-800 dark:text-gray-200">
       <div className="flex justify-between">
         <span>Market Cap:</span>
         <span className="font-bold">$4.3T</span>
@@ -565,7 +565,7 @@ icon: 'building-office'
 
 ## Trading Hours Around the World
 
-<div className="bg-gradient-to-br from-slate-50 to-gray-100 dark:from-slate-900 dark:to-gray-800 p-8 rounded-xl border border-slate-200 dark:border-slate-700 my-8">
+<div className="bg-gray-50">
   <h3 className="text-xl font-bold text-slate-800 dark:text-slate-200 mb-6 text-center">Global Trading Schedule (ET Time Zone)</h3>
 
   <div className="overflow-x-auto">
@@ -580,35 +580,35 @@ icon: 'building-office'
       </thead>
       <tbody>
         <tr className="border-b border-slate-100 dark:border-slate-800 hover:bg-slate-50 dark:hover:bg-slate-800/50">
-          <td className="p-4 font-medium text-blue-600 dark:text-blue-400">🇺🇸 NYSE/NASDAQ</td>
+          <td className="p-4 font-medium text-gray-600 dark:text-gray-400"> NYSE/NASDAQ</td>
           <td className="text-center p-4 text-slate-700 dark:text-slate-300">9:30 AM - 4:00 PM</td>
           <td className="text-center p-4 text-slate-700 dark:text-slate-300">9:30 AM - 4:00 PM</td>
           <td className="text-center p-4">
-            <span className="bg-green-100 dark:bg-green-900/30 text-green-800 dark:text-green-200 px-2 py-1 rounded text-xs">OPEN</span>
+            <span className="bg-gray-100 dark:bg-gray-900/30 text-gray-800 dark:text-gray-200 px-2 py-1 rounded text-xs">OPEN</span>
           </td>
         </tr>
         <tr className="border-b border-slate-100 dark:border-slate-800 hover:bg-slate-50 dark:hover:bg-slate-800/50">
-          <td className="p-4 font-medium text-red-600 dark:text-red-400">🇻🇳 HoSE/HNX</td>
+          <td className="p-4 font-medium text-gray-600 dark:text-gray-400">🇻🇳 HoSE/HNX</td>
           <td className="text-center p-4 text-slate-700 dark:text-slate-300">9:00 AM - 3:00 PM</td>
           <td className="text-center p-4 text-slate-700 dark:text-slate-300">9:00 PM - 3:00 AM+1</td>
           <td className="text-center p-4">
-            <span className="bg-red-100 dark:bg-red-900/30 text-red-800 dark:text-red-200 px-2 py-1 rounded text-xs">CLOSED</span>
+            <span className="bg-gray-100 dark:bg-gray-900/30 text-gray-800 dark:text-gray-200 px-2 py-1 rounded text-xs">CLOSED</span>
           </td>
         </tr>
         <tr className="border-b border-slate-100 dark:border-slate-800 hover:bg-slate-50 dark:hover:bg-slate-800/50">
-          <td className="p-4 font-medium text-purple-600 dark:text-purple-400">🇬🇧 LSE</td>
+          <td className="p-4 font-medium text-gray-600 dark:text-gray-400">🇬🇧 LSE</td>
           <td className="text-center p-4 text-slate-700 dark:text-slate-300">8:00 AM - 4:30 PM</td>
           <td className="text-center p-4 text-slate-700 dark:text-slate-300">3:00 AM - 11:30 AM</td>
           <td className="text-center p-4">
-            <span className="bg-red-100 dark:bg-red-900/30 text-red-800 dark:text-red-200 px-2 py-1 rounded text-xs">CLOSED</span>
+            <span className="bg-gray-100 dark:bg-gray-900/30 text-gray-800 dark:text-gray-200 px-2 py-1 rounded text-xs">CLOSED</span>
           </td>
         </tr>
         <tr className="border-b border-slate-100 dark:border-slate-800 hover:bg-slate-50 dark:hover:bg-slate-800/50">
-          <td className="p-4 font-medium text-green-600 dark:text-green-400">🇯🇵 TSE</td>
+          <td className="p-4 font-medium text-gray-600 dark:text-gray-400">🇯🇵 TSE</td>
           <td className="text-center p-4 text-slate-700 dark:text-slate-300">9:00 AM - 3:00 PM</td>
           <td className="text-center p-4 text-slate-700 dark:text-slate-300">7:00 PM - 1:00 AM+1</td>
           <td className="text-center p-4">
-            <span className="bg-red-100 dark:bg-red-900/30 text-red-800 dark:text-red-200 px-2 py-1 rounded text-xs">CLOSED</span>
+            <span className="bg-gray-100 dark:bg-gray-900/30 text-gray-800 dark:text-gray-200 px-2 py-1 rounded text-xs">CLOSED</span>
           </td>
         </tr>
       </tbody>
@@ -616,14 +616,14 @@ icon: 'building-office'
   </div>
 </div>
 
-<div className="bg-amber-50 dark:bg-amber-900/20 border border-amber-200 dark:border-amber-800 rounded-lg p-6 my-8">
+<div className="bg-gray-50 dark:bg-gray-900/20 border border-gray-200 dark:border-gray-800 rounded-lg p-6 my-8">
   <div className="flex items-start gap-4">
-    <div className="w-8 h-8 bg-amber-500 rounded-xl flex items-center justify-center flex-shrink-0">
-      <span className="text-white text-lg">💡</span>
+    <div className="w-8 h-8 bg-gray-500 rounded-xl flex items-center justify-center flex-shrink-0">
+      <span className="text-white text-lg"></span>
     </div>
     <div>
-      <h4 className="text-amber-800 dark:text-amber-200 font-bold mb-2">Key Takeaway</h4>
-      <p className="text-amber-700 dark:text-amber-300 text-sm">
+      <h4 className="text-gray-800 dark:text-gray-200 font-bold mb-2">Key Takeaway</h4>
+      <p className="text-gray-700 dark:text-gray-300 text-sm">
         Understanding different exchanges helps you diversify globally and take advantage of different market opportunities. Each exchange has unique characteristics, trading hours, and investment options that can complement your portfolio strategy.
       </p>
     </div>
