--- a/trading/markets/us-markets.mdx
+++ b/trading/markets/us-markets.mdx
@@ -4,14 +4,14 @@ description: 'Everything you need to know about trading US stocks'
 icon: 'flag-usa'
 ---
 
-<div className="flex items-center gap-2 mb-6 text-sm text-gray-600">
+<div className="flex items-center gap-2 mb-      <Card title="D      <Card title="Interest Rate Sensitive" color="#6b7280">fensive Sector" color="#6b7280"> text-sm text-gray-600">
   <Icon icon="clock" size={16} />
   <span>14 min read</span>
   <span>•</span>
   <span>Last updated: December 2024 by Quoc Doan</span>
 </div>
 
-<Card title="🇺🇸 World's Largest Stock Market" icon="building-columns" color="#1e40af">
+<Card title=" World's Largest Stock Market" icon="building-columns" color="#6b7280">
   The US stock market represents over 40% of global market capitalization, offering unparalleled liquidity, diversity, and investment opportunities across all sectors.
 </Card>
 
@@ -146,7 +146,7 @@ icon: 'flag-usa'
 <Tabs>
   <Tab title="Technology">
     <div className="space-y-4">
-      <Card title="📱 Largest Sector by Market Cap" color="#3b82f6">
+      <Card title="Largest Sector by Market Cap" color="#6b7280">
         Technology represents ~28% of S&P 500 market capitalization
       </Card>
 
@@ -166,7 +166,7 @@ icon: 'flag-usa'
 
   <Tab title="Healthcare">
     <div className="space-y-4">
-      <Card title="🏥 Defensive Sector" color="#059669">
+      <Card title=" Defensive Sector" color="#6b7280">
         Healthcare is considered defensive due to consistent demand regardless of economic cycles
       </Card>
 
@@ -186,7 +186,7 @@ icon: 'flag-usa'
 
   <Tab title="Financial Services">
     <div className="space-y-4">
-      <Card title="🏦 Interest Rate Sensitive" color="#7c3aed">
+      <Card title=" Interest Rate Sensitive" color="#6b7280">
         Banks and financial companies are highly sensitive to interest rate changes
       </Card>
 
