--- a/trading/strategies/trading-strategies.mdx
+++ b/trading/strategies/trading-strategies.mdx
@@ -26,9 +26,9 @@ icon: 'chess-king'
 
 ## Trading Strategy Overview
 
-<div className="bg-gradient-to-br from-emerald-50 via-teal-50 to-blue-50 dark:from-emerald-900/20 dark:via-teal-900/20 dark:to-blue-900/20 p-6 rounded-xl border border-emerald-200 dark:border-emerald-800 my-8">
+<div className="bg-gray-50">
   <div className="flex items-center gap-4 mb-4">
-    <div className="w-12 h-12 bg-gradient-to-br from-emerald-500 to-blue-500 rounded-xl flex items-center justify-center">
+    <div className="w-12 h-12 bg-gray-50">
       <Icon icon="target" size={24} className="text-white" />
     </div>
     <div>
@@ -52,9 +52,9 @@ icon: 'chess-king'
   </TabsList>
 
   <TabsContent value="scalping" className="mt-6">
-    <div className="bg-gradient-to-br from-red-50 to-orange-50 dark:from-red-900/20 dark:to-orange-900/20 p-6 rounded-xl border border-red-200 dark:border-red-800">
+    <div className="bg-gray-50">
       <div className="flex items-center gap-3 mb-4">
-        <div className="w-10 h-10 bg-red-500 rounded-xl flex items-center justify-center">
+        <div className="w-10 h-10 bg-gray-500 rounded-xl flex items-center justify-center">
           <Icon icon="zap" size={18} className="text-white" />
         </div>
         <div>
@@ -88,19 +88,19 @@ icon: 'chess-king'
       <div className="mt-4">
         <h4 className="font-semibold text-slate-700 dark:text-slate-300 mb-2">Key Requirements</h4>
         <div className="flex flex-wrap gap-2">
-          <span className="px-3 py-1 bg-red-100 dark:bg-red-900/30 text-red-700 dark:text-red-300 rounded-full text-xs">Low Latency</span>
-          <span className="px-3 py-1 bg-red-100 dark:bg-red-900/30 text-red-700 dark:text-red-300 rounded-full text-xs">Level 2 Data</span>
-          <span className="px-3 py-1 bg-red-100 dark:bg-red-900/30 text-red-700 dark:text-red-300 rounded-full text-xs">Advanced Charting</span>
-          <span className="px-3 py-1 bg-red-100 dark:bg-red-900/30 text-red-700 dark:text-red-300 rounded-full text-xs">Risk Management</span>
+          <span className="px-3 py-1 bg-gray-100 dark:bg-gray-900/30 text-gray-700 dark:text-gray-300 rounded-full text-xs">Low Latency</span>
+          <span className="px-3 py-1 bg-gray-100 dark:bg-gray-900/30 text-gray-700 dark:text-gray-300 rounded-full text-xs">Level 2 Data</span>
+          <span className="px-3 py-1 bg-gray-100 dark:bg-gray-900/30 text-gray-700 dark:text-gray-300 rounded-full text-xs">Advanced Charting</span>
+          <span className="px-3 py-1 bg-gray-100 dark:bg-gray-900/30 text-gray-700 dark:text-gray-300 rounded-full text-xs">Risk Management</span>
         </div>
       </div>
     </div>
   </TabsContent>
 
   <TabsContent value="day" className="mt-6">
-    <div className="bg-gradient-to-br from-orange-50 to-yellow-50 dark:from-orange-900/20 dark:to-yellow-900/20 p-6 rounded-xl border border-orange-200 dark:border-orange-800">
+    <div className="bg-gray-50">
       <div className="flex items-center gap-3 mb-4">
-        <div className="w-10 h-10 bg-orange-500 rounded-xl flex items-center justify-center">
+        <div className="w-10 h-10 bg-gray-500 rounded-xl flex items-center justify-center">
           <span className="text-white text-lg">🌅</span>
         </div>
         <div>
@@ -134,20 +134,20 @@ icon: 'chess-king'
       <div className="mt-4">
         <h4 className="font-semibold text-slate-700 dark:text-slate-300 mb-2">Popular Day Trading Strategies</h4>
         <div className="grid grid-cols-2 md:grid-cols-4 gap-2">
-          <span className="px-3 py-2 bg-orange-100 dark:bg-orange-900/30 text-orange-700 dark:text-orange-300 rounded-lg text-xs text-center">Momentum</span>
-          <span className="px-3 py-2 bg-orange-100 dark:bg-orange-900/30 text-orange-700 dark:text-orange-300 rounded-lg text-xs text-center">Breakouts</span>
-          <span className="px-3 py-2 bg-orange-100 dark:bg-orange-900/30 text-orange-700 dark:text-orange-300 rounded-lg text-xs text-center">Reversals</span>
-          <span className="px-3 py-2 bg-orange-100 dark:bg-orange-900/30 text-orange-700 dark:text-orange-300 rounded-lg text-xs text-center">Gap Trading</span>
+          <span className="px-3 py-2 bg-gray-100 dark:bg-gray-900/30 text-gray-700 dark:text-gray-300 rounded-lg text-xs text-center">Momentum</span>
+          <span className="px-3 py-2 bg-gray-100 dark:bg-gray-900/30 text-gray-700 dark:text-gray-300 rounded-lg text-xs text-center">Breakouts</span>
+          <span className="px-3 py-2 bg-gray-100 dark:bg-gray-900/30 text-gray-700 dark:text-gray-300 rounded-lg text-xs text-center">Reversals</span>
+          <span className="px-3 py-2 bg-gray-100 dark:bg-gray-900/30 text-gray-700 dark:text-gray-300 rounded-lg text-xs text-center">Gap Trading</span>
         </div>
       </div>
     </div>
   </TabsContent>
 
   <TabsContent value="swing" className="mt-6">
-    <div className="bg-gradient-to-br from-blue-50 to-indigo-50 dark:from-blue-900/20 dark:to-indigo-900/20 p-6 rounded-xl border border-blue-200 dark:border-blue-800">
+    <div className="bg-gray-50">
       <div className="flex items-center gap-3 mb-4">
-        <div className="w-10 h-10 bg-blue-500 rounded-xl flex items-center justify-center">
-          <span className="text-white text-lg">📈</span>
+        <div className="w-10 h-10 bg-gray-500 rounded-xl flex items-center justify-center">
+          <span className="text-white text-lg"></span>
         </div>
         <div>
           <h3 className="text-lg font-semibold text-slate-800 dark:text-slate-200">Swing Trading (Days to Weeks)</h3>
@@ -180,19 +180,19 @@ icon: 'chess-king'
       <div className="mt-4">
         <h4 className="font-semibold text-slate-700 dark:text-slate-300 mb-2">Common Swing Trading Patterns</h4>
         <div className="grid grid-cols-2 md:grid-cols-3 gap-2">
-          <span className="px-3 py-2 bg-blue-100 dark:bg-blue-900/30 text-blue-700 dark:text-blue-300 rounded-lg text-xs text-center">Cup & Handle</span>
-          <span className="px-3 py-2 bg-blue-100 dark:bg-blue-900/30 text-blue-700 dark:text-blue-300 rounded-lg text-xs text-center">Flag Patterns</span>
-          <span className="px-3 py-2 bg-blue-100 dark:bg-blue-900/30 text-blue-700 dark:text-blue-300 rounded-lg text-xs text-center">Support/Resistance</span>
+          <span className="px-3 py-2 bg-gray-100 dark:bg-gray-900/30 text-gray-700 dark:text-gray-300 rounded-lg text-xs text-center">Cup & Handle</span>
+          <span className="px-3 py-2 bg-gray-100 dark:bg-gray-900/30 text-gray-700 dark:text-gray-300 rounded-lg text-xs text-center">Flag Patterns</span>
+          <span className="px-3 py-2 bg-gray-100 dark:bg-gray-900/30 text-gray-700 dark:text-gray-300 rounded-lg text-xs text-center">Support/Resistance</span>
         </div>
       </div>
     </div>
   </TabsContent>
 
   <TabsContent value="position" className="mt-6">
-    <div className="bg-gradient-to-br from-purple-50 to-pink-50 dark:from-purple-900/20 dark:to-pink-900/20 p-6 rounded-xl border border-purple-200 dark:border-purple-800">
+    <div className="bg-gray-50">
       <div className="flex items-center gap-3 mb-4">
-        <div className="w-10 h-10 bg-purple-500 rounded-xl flex items-center justify-center">
-          <span className="text-white text-lg">🎯</span>
+        <div className="w-10 h-10 bg-gray-500 rounded-xl flex items-center justify-center">
+          <span className="text-white text-lg"></span>
         </div>
         <div>
           <h3 className="text-lg font-semibold text-slate-800 dark:text-slate-200">Position Trading (Weeks to Months)</h3>
@@ -225,8 +225,8 @@ icon: 'chess-king'
       <div className="mt-4">
         <h4 className="font-semibold text-slate-700 dark:text-slate-300 mb-2">Position Trading Focus Areas</h4>
         <div className="grid grid-cols-2 gap-2">
-          <span className="px-3 py-2 bg-purple-100 dark:bg-purple-900/30 text-purple-700 dark:text-purple-300 rounded-lg text-xs text-center">Macro Trends</span>
-          <span className="px-3 py-2 bg-purple-100 dark:bg-purple-900/30 text-purple-700 dark:text-purple-300 rounded-lg text-xs text-center">Fundamental Analysis</span>
+          <span className="px-3 py-2 bg-gray-100 dark:bg-gray-900/30 text-gray-700 dark:text-gray-300 rounded-lg text-xs text-center">Macro Trends</span>
+          <span className="px-3 py-2 bg-gray-100 dark:bg-gray-900/30 text-gray-700 dark:text-gray-300 rounded-lg text-xs text-center">Fundamental Analysis</span>
         </div>
       </div>
     </div>
@@ -237,10 +237,10 @@ icon: 'chess-king'
 
 <div className="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 my-8">
 
-  <div className="bg-gradient-to-br from-emerald-50 to-teal-50 dark:from-emerald-900/20 dark:to-teal-900/20 p-6 rounded-xl border border-emerald-200 dark:border-emerald-800">
+  <div className="bg-gray-50">
     <div className="flex items-center gap-3 mb-4">
-      <div className="w-10 h-10 bg-emerald-500 rounded-xl flex items-center justify-center">
-        <span className="text-white text-lg">📊</span>
+      <div className="w-10 h-10 bg-gray-500 rounded-xl flex items-center justify-center">
+        <span className="text-white text-lg"></span>
       </div>
       <h3 className="text-lg font-semibold text-slate-800 dark:text-slate-200">Momentum Trading</h3>
     </div>
@@ -249,24 +249,24 @@ icon: 'chess-king'
     </p>
     <div className="space-y-2">
       <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-emerald-500 rounded-full"></span>
+        <span className="w-2 h-2 bg-gray-500 rounded-full"></span>
         <span className="text-xs text-slate-600 dark:text-slate-400">Strong directional moves</span>
       </div>
       <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-emerald-500 rounded-full"></span>
+        <span className="w-2 h-2 bg-gray-500 rounded-full"></span>
         <span className="text-xs text-slate-600 dark:text-slate-400">High volume confirmation</span>
       </div>
       <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-emerald-500 rounded-full"></span>
+        <span className="w-2 h-2 bg-gray-500 rounded-full"></span>
         <span className="text-xs text-slate-600 dark:text-slate-400">News catalyst driven</span>
       </div>
     </div>
   </div>
 
-  <div className="bg-gradient-to-br from-blue-50 to-cyan-50 dark:from-blue-900/20 dark:to-cyan-900/20 p-6 rounded-xl border border-blue-200 dark:border-blue-800">
+  <div className="bg-gray-50">
     <div className="flex items-center gap-3 mb-4">
-      <div className="w-10 h-10 bg-blue-500 rounded-xl flex items-center justify-center">
-        <span className="text-white text-lg">🔄</span>
+      <div className="w-10 h-10 bg-gray-500 rounded-xl flex items-center justify-center">
+        <span className="text-white text-lg"></span>
       </div>
       <h3 className="text-lg font-semibold text-slate-800 dark:text-slate-200">Mean Reversion</h3>
     </div>
@@ -275,24 +275,24 @@ icon: 'chess-king'
     </p>
     <div className="space-y-2">
       <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-blue-500 rounded-full"></span>
+        <span className="w-2 h-2 bg-gray-500 rounded-full"></span>
         <span className="text-xs text-slate-600 dark:text-slate-400">Oversold/overbought conditions</span>
       </div>
       <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-blue-500 rounded-full"></span>
+        <span className="w-2 h-2 bg-gray-500 rounded-full"></span>
         <span className="text-xs text-slate-600 dark:text-slate-400">Statistical analysis</span>
       </div>
       <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-blue-500 rounded-full"></span>
+        <span className="w-2 h-2 bg-gray-500 rounded-full"></span>
         <span className="text-xs text-slate-600 dark:text-slate-400">Range-bound markets</span>
       </div>
     </div>
   </div>
 
-  <div className="bg-gradient-to-br from-purple-50 to-pink-50 dark:from-purple-900/20 dark:to-pink-900/20 p-6 rounded-xl border border-purple-200 dark:border-purple-800">
+  <div className="bg-gray-50">
     <div className="flex items-center gap-3 mb-4">
-      <div className="w-10 h-10 bg-purple-500 rounded-xl flex items-center justify-center">
-        <span className="text-white text-lg">💰</span>
+      <div className="w-10 h-10 bg-gray-500 rounded-xl flex items-center justify-center">
+        <span className="text-white text-lg"></span>
       </div>
       <h3 className="text-lg font-semibold text-slate-800 dark:text-slate-200">Arbitrage</h3>
     </div>
@@ -301,23 +301,23 @@ icon: 'chess-king'
     </p>
     <div className="space-y-2">
       <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-purple-500 rounded-full"></span>
+        <span className="w-2 h-2 bg-gray-500 rounded-full"></span>
         <span className="text-xs text-slate-600 dark:text-slate-400">Risk-free profit</span>
       </div>
       <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-purple-500 rounded-full"></span>
+        <span className="w-2 h-2 bg-gray-500 rounded-full"></span>
         <span className="text-xs text-slate-600 dark:text-slate-400">Market inefficiencies</span>
       </div>
       <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-purple-500 rounded-full"></span>
+        <span className="w-2 h-2 bg-gray-500 rounded-full"></span>
         <span className="text-xs text-slate-600 dark:text-slate-400">Advanced technology required</span>
       </div>
     </div>
   </div>
 
-  <div className="bg-gradient-to-br from-orange-50 to-red-50 dark:from-orange-900/20 dark:to-red-900/20 p-6 rounded-xl border border-orange-200 dark:border-orange-800">
+  <div className="bg-gray-50">
     <div className="flex items-center gap-3 mb-4">
-      <div className="w-10 h-10 bg-orange-500 rounded-xl flex items-center justify-center">
+      <div className="w-10 h-10 bg-gray-500 rounded-xl flex items-center justify-center">
         <span className="text-white text-lg">🎢</span>
       </div>
       <h3 className="text-lg font-semibold text-slate-800 dark:text-slate-200">Breakout Trading</h3>
@@ -327,24 +327,24 @@ icon: 'chess-king'
     </p>
     <div className="space-y-2">
       <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-orange-500 rounded-full"></span>
+        <span className="w-2 h-2 bg-gray-500 rounded-full"></span>
         <span className="text-xs text-slate-600 dark:text-slate-400">Technical pattern recognition</span>
       </div>
       <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-orange-500 rounded-full"></span>
+        <span className="w-2 h-2 bg-gray-500 rounded-full"></span>
         <span className="text-xs text-slate-600 dark:text-slate-400">Volume confirmation</span>
       </div>
       <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-orange-500 rounded-full"></span>
+        <span className="w-2 h-2 bg-gray-500 rounded-full"></span>
         <span className="text-xs text-slate-600 dark:text-slate-400">False breakout risk</span>
       </div>
     </div>
   </div>
 
-  <div className="bg-gradient-to-br from-teal-50 to-green-50 dark:from-teal-900/20 dark:to-green-900/20 p-6 rounded-xl border border-teal-200 dark:border-teal-800">
+  <div className="bg-gray-50">
     <div className="flex items-center gap-3 mb-4">
-      <div className="w-10 h-10 bg-teal-500 rounded-xl flex items-center justify-center">
-        <span className="text-white text-lg">📈</span>
+      <div className="w-10 h-10 bg-gray-500 rounded-xl flex items-center justify-center">
+        <span className="text-white text-lg"></span>
       </div>
       <h3 className="text-lg font-semibold text-slate-800 dark:text-slate-200">Trend Following</h3>
     </div>
@@ -353,23 +353,23 @@ icon: 'chess-king'
     </p>
     <div className="space-y-2">
       <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-teal-500 rounded-full"></span>
+        <span className="w-2 h-2 bg-gray-500 rounded-full"></span>
         <span className="text-xs text-slate-600 dark:text-slate-400">Moving averages</span>
       </div>
       <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-teal-500 rounded-full"></span>
+        <span className="w-2 h-2 bg-gray-500 rounded-full"></span>
         <span className="text-xs text-slate-600 dark:text-slate-400">Trend strength indicators</span>
       </div>
       <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-teal-500 rounded-full"></span>
+        <span className="w-2 h-2 bg-gray-500 rounded-full"></span>
         <span className="text-xs text-slate-600 dark:text-slate-400">Risk management crucial</span>
       </div>
     </div>
   </div>
 
-  <div className="bg-gradient-to-br from-indigo-50 to-purple-50 dark:from-indigo-900/20 dark:to-purple-900/20 p-6 rounded-xl border border-indigo-200 dark:border-indigo-800">
+  <div className="bg-gray-50">
     <div className="flex items-center gap-3 mb-4">
-      <div className="w-10 h-10 bg-indigo-500 rounded-xl flex items-center justify-center">
+      <div className="w-10 h-10 bg-gray-500 rounded-xl flex items-center justify-center">
         <span className="text-white text-lg">⚖️</span>
       </div>
       <h3 className="text-lg font-semibold text-slate-800 dark:text-slate-200">Pairs Trading</h3>
@@ -379,15 +379,15 @@ icon: 'chess-king'
     </p>
     <div className="space-y-2">
       <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-indigo-500 rounded-full"></span>
+        <span className="w-2 h-2 bg-gray-500 rounded-full"></span>
         <span className="text-xs text-slate-600 dark:text-slate-400">Market neutral strategy</span>
       </div>
       <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-indigo-500 rounded-full"></span>
+        <span className="w-2 h-2 bg-gray-500 rounded-full"></span>
         <span className="text-xs text-slate-600 dark:text-slate-400">Statistical relationships</span>
       </div>
       <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-indigo-500 rounded-full"></span>
+        <span className="w-2 h-2 bg-gray-500 rounded-full"></span>
         <span className="text-xs text-slate-600 dark:text-slate-400">Reduced market risk</span>
       </div>
     </div>
@@ -397,7 +397,7 @@ icon: 'chess-king'
 
 ## Risk Management in Trading Strategies
 
-<div className="bg-gradient-to-br from-red-50 via-orange-50 to-yellow-50 dark:from-red-900/20 dark:via-orange-900/20 dark:to-yellow-900/20 p-6 rounded-xl border border-red-200 dark:border-red-800 my-8">
+<div className="bg-gray-50">
   <h3 className="text-xl font-bold text-slate-800 dark:text-slate-200 mb-4">Essential Risk Management Principles</h3>
 
   <div className="grid grid-cols-1 md:grid-cols-2 gap-6">
@@ -405,21 +405,21 @@ icon: 'chess-king'
       <h4 className="font-semibold text-slate-700 dark:text-slate-300 mb-3">Position Sizing Rules</h4>
       <div className="space-y-3">
         <div className="flex items-start gap-3">
-          <span className="w-6 h-6 bg-red-100 dark:bg-red-900/30 text-red-600 dark:text-red-400 rounded-full flex items-center justify-center text-sm font-bold">1</span>
+          <span className="w-6 h-6 bg-gray-100 dark:bg-gray-900/30 text-gray-600 dark:text-gray-400 rounded-full flex items-center justify-center text-sm font-bold">1</span>
           <div>
             <p className="font-medium text-slate-700 dark:text-slate-300">1% Risk Rule</p>
             <p className="text-sm text-slate-600 dark:text-slate-400">Never risk more than 1% of capital on a single trade</p>
           </div>
         </div>
         <div className="flex items-start gap-3">
-          <span className="w-6 h-6 bg-red-100 dark:bg-red-900/30 text-red-600 dark:text-red-400 rounded-full flex items-center justify-center text-sm font-bold">2</span>
+          <span className="w-6 h-6 bg-gray-100 dark:bg-gray-900/30 text-gray-600 dark:text-gray-400 rounded-full flex items-center justify-center text-sm font-bold">2</span>
           <div>
             <p className="font-medium text-slate-700 dark:text-slate-300">Kelly Criterion</p>
             <p className="text-sm text-slate-600 dark:text-slate-400">Optimal position size based on win rate and risk/reward</p>
           </div>
         </div>
         <div className="flex items-start gap-3">
-          <span className="w-6 h-6 bg-red-100 dark:bg-red-900/30 text-red-600 dark:text-red-400 rounded-full flex items-center justify-center text-sm font-bold">3</span>
+          <span className="w-6 h-6 bg-gray-100 dark:bg-gray-900/30 text-gray-600 dark:text-gray-400 rounded-full flex items-center justify-center text-sm font-bold">3</span>
           <div>
             <p className="font-medium text-slate-700 dark:text-slate-300">Portfolio Heat</p>
             <p className="text-sm text-slate-600 dark:text-slate-400">Total risk across all open positions</p>
@@ -453,7 +453,7 @@ icon: 'chess-king'
 <div className="overflow-x-auto my-8">
   <table className="w-full border-collapse border border-slate-300 dark:border-slate-700 rounded-lg overflow-hidden">
     <thead>
-      <tr className="bg-gradient-to-r from-blue-50 to-purple-50 dark:from-blue-900/30 dark:to-purple-900/30">
+      <tr className="bg-gradient-to-r bg-gray-50 dark:from-blue-900/30 dark:to-purple-900/30">
         <th className="border border-slate-300 dark:border-slate-700 p-3 text-left font-semibold text-slate-700 dark:text-slate-300">Metric</th>
         <th className="border border-slate-300 dark:border-slate-700 p-3 text-left font-semibold text-slate-700 dark:text-slate-300">Description</th>
         <th className="border border-slate-300 dark:border-slate-700 p-3 text-left font-semibold text-slate-700 dark:text-slate-300">Good Range</th>
@@ -498,8 +498,8 @@ icon: 'chess-king'
 ## Building Your Trading Strategy
 
 <div className="grid grid-cols-1 md:grid-cols-3 gap-6 my-8">
-  <div className="bg-gradient-to-br from-emerald-50 to-teal-50 dark:from-emerald-900/20 dark:to-teal-900/20 p-6 rounded-xl border border-emerald-200 dark:border-emerald-800">
-    <div className="w-12 h-12 bg-emerald-500 rounded-xl flex items-center justify-center mb-4">
+  <div className="bg-gray-50">
+    <div className="w-12 h-12 bg-gray-500 rounded-xl flex items-center justify-center mb-4">
       <span className="text-white text-xl">1️⃣</span>
     </div>
     <h3 className="text-lg font-semibold text-slate-800 dark:text-slate-200 mb-2">Define Your Edge</h3>
@@ -508,8 +508,8 @@ icon: 'chess-king'
     </p>
   </div>
 
-  <div className="bg-gradient-to-br from-blue-50 to-indigo-50 dark:from-blue-900/20 dark:to-indigo-900/20 p-6 rounded-xl border border-blue-200 dark:border-blue-800">
-    <div className="w-12 h-12 bg-blue-500 rounded-xl flex items-center justify-center mb-4">
+  <div className="bg-gray-50">
+    <div className="w-12 h-12 bg-gray-500 rounded-xl flex items-center justify-center mb-4">
       <span className="text-white text-xl">2️⃣</span>
     </div>
     <h3 className="text-lg font-semibold text-slate-800 dark:text-slate-200 mb-2">Backtest & Validate</h3>
@@ -518,8 +518,8 @@ icon: 'chess-king'
     </p>
   </div>
 
-  <div className="bg-gradient-to-br from-purple-50 to-pink-50 dark:from-purple-900/20 dark:to-pink-900/20 p-6 rounded-xl border border-purple-200 dark:border-purple-800">
-    <div className="w-12 h-12 bg-purple-500 rounded-xl flex items-center justify-center mb-4">
+  <div className="bg-gray-50">
+    <div className="w-12 h-12 bg-gray-500 rounded-xl flex items-center justify-center mb-4">
       <span className="text-white text-xl">3️⃣</span>
     </div>
     <h3 className="text-lg font-semibold text-slate-800 dark:text-slate-200 mb-2">Risk Management</h3>
