--- a/trading/fundamentals/risk-management.mdx
+++ b/trading/fundamentals/risk-management.mdx
@@ -26,9 +26,9 @@ icon: 'shield-check'
 
 ## The Foundation of Trading Success
 
-<div className="bg-gradient-to-br from-red-50 via-orange-50 to-yellow-50 dark:from-red-900/20 dark:via-orange-900/20 dark:to-yellow-900/20 p-6 rounded-xl border border-red-200 dark:border-red-800 my-8">
+<div className="bg-gray-50">
   <div className="flex items-center gap-4 mb-4">
-    <div className="w-12 h-12 bg-gradient-to-br from-red-500 to-orange-500 rounded-xl flex items-center justify-center">
+    <div className="w-12 h-12 bg-gray-50">
       <span className="text-white text-2xl">🛡️</span>
     </div>
     <div>
@@ -45,10 +45,10 @@ icon: 'shield-check'
 
 <div className="grid grid-cols-1 md:grid-cols-2 gap-6 my-8">
 
-  <div className="bg-gradient-to-br from-blue-50 to-indigo-50 dark:from-blue-900/20 dark:to-indigo-900/20 p-6 rounded-xl border border-blue-200 dark:border-blue-800">
+  <div className="bg-gray-50">
     <div className="flex items-center gap-3 mb-4">
-      <div className="w-10 h-10 bg-blue-500 rounded-xl flex items-center justify-center">
-        <span className="text-white text-lg">📊</span>
+      <div className="w-10 h-10 bg-gray-500 rounded-xl flex items-center justify-center">
+        <span className="text-white text-lg"></span>
       </div>
       <h3 className="text-lg font-semibold text-slate-800 dark:text-slate-200">Position Sizing</h3>
     </div>
@@ -57,24 +57,24 @@ icon: 'shield-check'
     </p>
     <div className="space-y-2">
       <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-blue-500 rounded-full"></span>
+        <span className="w-2 h-2 bg-gray-500 rounded-full"></span>
         <span className="text-xs text-slate-600 dark:text-slate-400">1-2% rule per trade</span>
       </div>
       <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-blue-500 rounded-full"></span>
+        <span className="w-2 h-2 bg-gray-500 rounded-full"></span>
         <span className="text-xs text-slate-600 dark:text-slate-400">Kelly Criterion optimization</span>
       </div>
       <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-blue-500 rounded-full"></span>
+        <span className="w-2 h-2 bg-gray-500 rounded-full"></span>
         <span className="text-xs text-slate-600 dark:text-slate-400">Fixed fractional method</span>
       </div>
     </div>
   </div>
 
-  <div className="bg-gradient-to-br from-emerald-50 to-teal-50 dark:from-emerald-900/20 dark:to-teal-900/20 p-6 rounded-xl border border-emerald-200 dark:border-emerald-800">
+  <div className="bg-gray-50">
     <div className="flex items-center gap-3 mb-4">
-      <div className="w-10 h-10 bg-emerald-500 rounded-xl flex items-center justify-center">
-        <span className="text-white text-lg">🎯</span>
+      <div className="w-10 h-10 bg-gray-500 rounded-xl flex items-center justify-center">
+        <span className="text-white text-lg"></span>
       </div>
       <h3 className="text-lg font-semibold text-slate-800 dark:text-slate-200">Stop Losses</h3>
     </div>
@@ -83,24 +83,24 @@ icon: 'shield-check'
     </p>
     <div className="space-y-2">
       <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-emerald-500 rounded-full"></span>
+        <span className="w-2 h-2 bg-gray-500 rounded-full"></span>
         <span className="text-xs text-slate-600 dark:text-slate-400">Technical stop levels</span>
       </div>
       <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-emerald-500 rounded-full"></span>
+        <span className="w-2 h-2 bg-gray-500 rounded-full"></span>
         <span className="text-xs text-slate-600 dark:text-slate-400">Percentage-based stops</span>
       </div>
       <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-emerald-500 rounded-full"></span>
+        <span className="w-2 h-2 bg-gray-500 rounded-full"></span>
         <span className="text-xs text-slate-600 dark:text-slate-400">Time-based exits</span>
       </div>
     </div>
   </div>
 
-  <div className="bg-gradient-to-br from-purple-50 to-pink-50 dark:from-purple-900/20 dark:to-pink-900/20 p-6 rounded-xl border border-purple-200 dark:border-purple-800">
+  <div className="bg-gray-50">
     <div className="flex items-center gap-3 mb-4">
-      <div className="w-10 h-10 bg-purple-500 rounded-xl flex items-center justify-center">
-        <span className="text-white text-lg">🔄</span>
+      <div className="w-10 h-10 bg-gray-500 rounded-xl flex items-center justify-center">
+        <span className="text-white text-lg"></span>
       </div>
       <h3 className="text-lg font-semibold text-slate-800 dark:text-slate-200">Diversification</h3>
     </div>
@@ -109,23 +109,23 @@ icon: 'shield-check'
     </p>
     <div className="space-y-2">
       <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-purple-500 rounded-full"></span>
+        <span className="w-2 h-2 bg-gray-500 rounded-full"></span>
         <span className="text-xs text-slate-600 dark:text-slate-400">Asset class diversification</span>
       </div>
       <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-purple-500 rounded-full"></span>
+        <span className="w-2 h-2 bg-gray-500 rounded-full"></span>
         <span className="text-xs text-slate-600 dark:text-slate-400">Sector diversification</span>
       </div>
       <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-purple-500 rounded-full"></span>
+        <span className="w-2 h-2 bg-gray-500 rounded-full"></span>
         <span className="text-xs text-slate-600 dark:text-slate-400">Geographic diversification</span>
       </div>
     </div>
   </div>
 
-  <div className="bg-gradient-to-br from-orange-50 to-red-50 dark:from-orange-900/20 dark:to-red-900/20 p-6 rounded-xl border border-orange-200 dark:border-orange-800">
+  <div className="bg-gray-50">
     <div className="flex items-center gap-3 mb-4">
-      <div className="w-10 h-10 bg-orange-500 rounded-xl flex items-center justify-center">
+      <div className="w-10 h-10 bg-gray-500 rounded-xl flex items-center justify-center">
         <span className="text-white text-lg">⚖️</span>
       </div>
       <h3 className="text-lg font-semibold text-slate-800 dark:text-slate-200">Risk-Reward Ratio</h3>
@@ -135,15 +135,15 @@ icon: 'shield-check'
     </p>
     <div className="space-y-2">
       <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-orange-500 rounded-full"></span>
+        <span className="w-2 h-2 bg-gray-500 rounded-full"></span>
         <span className="text-xs text-slate-600 dark:text-slate-400">Minimum 1:1 ratio</span>
       </div>
       <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-orange-500 rounded-full"></span>
+        <span className="w-2 h-2 bg-gray-500 rounded-full"></span>
         <span className="text-xs text-slate-600 dark:text-slate-400">Target 2:1 or better</span>
       </div>
       <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-orange-500 rounded-full"></span>
+        <span className="w-2 h-2 bg-gray-500 rounded-full"></span>
         <span className="text-xs text-slate-600 dark:text-slate-400">Probability adjustment</span>
       </div>
     </div>
@@ -162,7 +162,7 @@ icon: 'shield-check'
   </TabsList>
 
   <TabsContent value="percentage" className="mt-6">
-    <div className="bg-gradient-to-br from-blue-50 to-indigo-50 dark:from-blue-900/20 dark:to-indigo-900/20 p-6 rounded-xl border border-blue-200 dark:border-blue-800">
+    <div className="bg-gray-50">
       <h3 className="text-xl font-semibold text-slate-800 dark:text-slate-200 mb-4">Fixed Percentage Risk Method</h3>
 
       <div className="bg-white dark:bg-slate-800 p-4 rounded-lg border border-slate-200 dark:border-slate-700 mb-4">
@@ -212,7 +212,7 @@ icon: 'shield-check'
   </TabsContent>
 
   <TabsContent value="kelly" className="mt-6">
-    <div className="bg-gradient-to-br from-emerald-50 to-teal-50 dark:from-emerald-900/20 dark:to-teal-900/20 p-6 rounded-xl border border-emerald-200 dark:border-emerald-800">
+    <div className="bg-gray-50">
       <h3 className="text-xl font-semibold text-slate-800 dark:text-slate-200 mb-4">Kelly Criterion Method</h3>
 
       <div className="bg-white dark:bg-slate-800 p-4 rounded-lg border border-slate-200 dark:border-slate-700 mb-4">
@@ -235,7 +235,7 @@ icon: 'shield-check'
             <p><strong>Average Loss:</strong> $200</p>
             <p><strong>Odds (b):</strong> $300/$200 = 1.5</p>
             <p><strong>Kelly %:</strong> (1.5 × 0.6 - 0.4) ÷ 1.5 = 33.3%</p>
-            <p className="text-red-600 dark:text-red-400"><strong>Recommended:</strong> Use 25% of Kelly (8.3%)</p>
+            <p className="text-gray-600 dark:text-gray-400"><strong>Recommended:</strong> Use 25% of Kelly (8.3%)</p>
           </div>
         </div>
 
@@ -265,7 +265,7 @@ icon: 'shield-check'
   </TabsContent>
 
   <TabsContent value="atr" className="mt-6">
-    <div className="bg-gradient-to-br from-purple-50 to-pink-50 dark:from-purple-900/20 dark:to-pink-900/20 p-6 rounded-xl border border-purple-200 dark:border-purple-800">
+    <div className="bg-gray-50">
       <h3 className="text-xl font-semibold text-slate-800 dark:text-slate-200 mb-4">ATR-Based Position Sizing</h3>
 
       <div className="bg-white dark:bg-slate-800 p-4 rounded-lg border border-slate-200 dark:border-slate-700 mb-4">
@@ -317,7 +317,7 @@ icon: 'shield-check'
   </TabsContent>
 
   <TabsContent value="volatility" className="mt-6">
-    <div className="bg-gradient-to-br from-orange-50 to-red-50 dark:from-orange-900/20 dark:to-red-900/20 p-6 rounded-xl border border-orange-200 dark:border-orange-800">
+    <div className="bg-gray-50">
       <h3 className="text-xl font-semibold text-slate-800 dark:text-slate-200 mb-4">Volatility-Based Sizing</h3>
 
       <div className="bg-white dark:bg-slate-800 p-4 rounded-lg border border-slate-200 dark:border-slate-700 mb-4">
@@ -393,10 +393,10 @@ icon: 'shield-check'
 
 <div className="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 my-8">
 
-  <div className="bg-gradient-to-br from-red-50 to-orange-50 dark:from-red-900/20 dark:to-orange-900/20 p-6 rounded-xl border border-red-200 dark:border-red-800">
+  <div className="bg-gray-50">
     <div className="flex items-center gap-3 mb-4">
-      <div className="w-10 h-10 bg-red-500 rounded-xl flex items-center justify-center">
-        <span className="text-white text-lg">📈</span>
+      <div className="w-10 h-10 bg-gray-500 rounded-xl flex items-center justify-center">
+        <span className="text-white text-lg"></span>
       </div>
       <h3 className="text-lg font-semibold text-slate-800 dark:text-slate-200">Technical Stop Loss</h3>
     </div>
@@ -405,27 +405,27 @@ icon: 'shield-check'
     </p>
     <div className="space-y-2">
       <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-red-500 rounded-full"></span>
+        <span className="w-2 h-2 bg-gray-500 rounded-full"></span>
         <span className="text-xs text-slate-600 dark:text-slate-400">Support/resistance levels</span>
       </div>
       <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-red-500 rounded-full"></span>
+        <span className="w-2 h-2 bg-gray-500 rounded-full"></span>
         <span className="text-xs text-slate-600 dark:text-slate-400">Moving averages</span>
       </div>
       <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-red-500 rounded-full"></span>
+        <span className="w-2 h-2 bg-gray-500 rounded-full"></span>
         <span className="text-xs text-slate-600 dark:text-slate-400">Trend lines</span>
       </div>
       <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-red-500 rounded-full"></span>
+        <span className="w-2 h-2 bg-gray-500 rounded-full"></span>
         <span className="text-xs text-slate-600 dark:text-slate-400">Chart patterns</span>
       </div>
     </div>
   </div>
 
-  <div className="bg-gradient-to-br from-blue-50 to-indigo-50 dark:from-blue-900/20 dark:to-indigo-900/20 p-6 rounded-xl border border-blue-200 dark:border-blue-800">
+  <div className="bg-gray-50">
     <div className="flex items-center gap-3 mb-4">
-      <div className="w-10 h-10 bg-blue-500 rounded-xl flex items-center justify-center">
+      <div className="w-10 h-10 bg-gray-500 rounded-xl flex items-center justify-center">
         <span className="text-white text-lg">%</span>
       </div>
       <h3 className="text-lg font-semibold text-slate-800 dark:text-slate-200">Percentage Stop Loss</h3>
@@ -435,24 +435,24 @@ icon: 'shield-check'
     </p>
     <div className="space-y-2">
       <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-blue-500 rounded-full"></span>
+        <span className="w-2 h-2 bg-gray-500 rounded-full"></span>
         <span className="text-xs text-slate-600 dark:text-slate-400">Day trading: 0.5-2%</span>
       </div>
       <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-blue-500 rounded-full"></span>
+        <span className="w-2 h-2 bg-gray-500 rounded-full"></span>
         <span className="text-xs text-slate-600 dark:text-slate-400">Swing trading: 2-8%</span>
       </div>
       <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-blue-500 rounded-full"></span>
+        <span className="w-2 h-2 bg-gray-500 rounded-full"></span>
         <span className="text-xs text-slate-600 dark:text-slate-400">Position trading: 8-20%</span>
       </div>
     </div>
   </div>
 
-  <div className="bg-gradient-to-br from-emerald-50 to-teal-50 dark:from-emerald-900/20 dark:to-teal-900/20 p-6 rounded-xl border border-emerald-200 dark:border-emerald-800">
+  <div className="bg-gray-50">
     <div className="flex items-center gap-3 mb-4">
-      <div className="w-10 h-10 bg-emerald-500 rounded-xl flex items-center justify-center">
-        <span className="text-white text-lg">🔄</span>
+      <div className="w-10 h-10 bg-gray-500 rounded-xl flex items-center justify-center">
+        <span className="text-white text-lg"></span>
       </div>
       <h3 className="text-lg font-semibold text-slate-800 dark:text-slate-200">Trailing Stop Loss</h3>
     </div>
@@ -461,23 +461,23 @@ icon: 'shield-check'
     </p>
     <div className="space-y-2">
       <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-emerald-500 rounded-full"></span>
+        <span className="w-2 h-2 bg-gray-500 rounded-full"></span>
         <span className="text-xs text-slate-600 dark:text-slate-400">Fixed percentage trail</span>
       </div>
       <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-emerald-500 rounded-full"></span>
+        <span className="w-2 h-2 bg-gray-500 rounded-full"></span>
         <span className="text-xs text-slate-600 dark:text-slate-400">ATR-based trailing</span>
       </div>
       <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-emerald-500 rounded-full"></span>
+        <span className="w-2 h-2 bg-gray-500 rounded-full"></span>
         <span className="text-xs text-slate-600 dark:text-slate-400">Chandelier exit</span>
       </div>
     </div>
   </div>
 
-  <div className="bg-gradient-to-br from-purple-50 to-pink-50 dark:from-purple-900/20 dark:to-pink-900/20 p-6 rounded-xl border border-purple-200 dark:border-purple-800">
+  <div className="bg-gray-50">
     <div className="flex items-center gap-3 mb-4">
-      <div className="w-10 h-10 bg-purple-500 rounded-xl flex items-center justify-center">
+      <div className="w-10 h-10 bg-gray-500 rounded-xl flex items-center justify-center">
         <span className="text-white text-lg">⏰</span>
       </div>
       <h3 className="text-lg font-semibold text-slate-800 dark:text-slate-200">Time-Based Stop</h3>
@@ -487,24 +487,24 @@ icon: 'shield-check'
     </p>
     <div className="space-y-2">
       <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-purple-500 rounded-full"></span>
+        <span className="w-2 h-2 bg-gray-500 rounded-full"></span>
         <span className="text-xs text-slate-600 dark:text-slate-400">Intraday time limits</span>
       </div>
       <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-purple-500 rounded-full"></span>
+        <span className="w-2 h-2 bg-gray-500 rounded-full"></span>
         <span className="text-xs text-slate-600 dark:text-slate-400">Earnings event exits</span>
       </div>
       <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-purple-500 rounded-full"></span>
+        <span className="w-2 h-2 bg-gray-500 rounded-full"></span>
         <span className="text-xs text-slate-600 dark:text-slate-400">Maximum hold periods</span>
       </div>
     </div>
   </div>
 
-  <div className="bg-gradient-to-br from-yellow-50 to-orange-50 dark:from-yellow-900/20 dark:to-orange-900/20 p-6 rounded-xl border border-yellow-200 dark:border-yellow-800">
+  <div className="bg-gray-50">
     <div className="flex items-center gap-3 mb-4">
-      <div className="w-10 h-10 bg-yellow-500 rounded-xl flex items-center justify-center">
-        <span className="text-white text-lg">📊</span>
+      <div className="w-10 h-10 bg-gray-500 rounded-xl flex items-center justify-center">
+        <span className="text-white text-lg"></span>
       </div>
       <h3 className="text-lg font-semibold text-slate-800 dark:text-slate-200">Volatility Stop</h3>
     </div>
@@ -513,24 +513,24 @@ icon: 'shield-check'
     </p>
     <div className="space-y-2">
       <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-yellow-500 rounded-full"></span>
+        <span className="w-2 h-2 bg-gray-500 rounded-full"></span>
         <span className="text-xs text-slate-600 dark:text-slate-400">Average True Range (ATR)</span>
       </div>
       <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-yellow-500 rounded-full"></span>
+        <span className="w-2 h-2 bg-gray-500 rounded-full"></span>
         <span className="text-xs text-slate-600 dark:text-slate-400">Standard deviation bands</span>
       </div>
       <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-yellow-500 rounded-full"></span>
+        <span className="w-2 h-2 bg-gray-500 rounded-full"></span>
         <span className="text-xs text-slate-600 dark:text-slate-400">Keltner channels</span>
       </div>
     </div>
   </div>
 
-  <div className="bg-gradient-to-br from-indigo-50 to-purple-50 dark:from-indigo-900/20 dark:to-purple-900/20 p-6 rounded-xl border border-indigo-200 dark:border-indigo-800">
+  <div className="bg-gray-50">
     <div className="flex items-center gap-3 mb-4">
-      <div className="w-10 h-10 bg-indigo-500 rounded-xl flex items-center justify-center">
-        <span className="text-white text-lg">💡</span>
+      <div className="w-10 h-10 bg-gray-500 rounded-xl flex items-center justify-center">
+        <span className="text-white text-lg"></span>
       </div>
       <h3 className="text-lg font-semibold text-slate-800 dark:text-slate-200">Mental Stop Loss</h3>
     </div>
@@ -539,15 +539,15 @@ icon: 'shield-check'
     </p>
     <div className="space-y-2">
       <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-indigo-500 rounded-full"></span>
+        <span className="w-2 h-2 bg-gray-500 rounded-full"></span>
         <span className="text-xs text-slate-600 dark:text-slate-400">Requires discipline</span>
       </div>
       <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-indigo-500 rounded-full"></span>
+        <span className="w-2 h-2 bg-gray-500 rounded-full"></span>
         <span className="text-xs text-slate-600 dark:text-slate-400">Avoids stop hunting</span>
       </div>
       <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-indigo-500 rounded-full"></span>
+        <span className="w-2 h-2 bg-gray-500 rounded-full"></span>
         <span className="text-xs text-slate-600 dark:text-slate-400">Flexible adjustment</span>
       </div>
     </div>
@@ -557,7 +557,7 @@ icon: 'shield-check'
 
 ## Portfolio Risk Management
 
-<div className="bg-gradient-to-br from-slate-50 via-blue-50 to-indigo-50 dark:from-slate-900/50 dark:via-blue-900/20 dark:to-indigo-900/20 p-6 rounded-xl border border-slate-200 dark:border-slate-700 my-8">
+<div className="bg-gray-50">
   <h3 className="text-xl font-bold text-slate-800 dark:text-slate-200 mb-6">Portfolio Heat and Correlation Management</h3>
 
   <div className="grid grid-cols-1 md:grid-cols-2 gap-6">
@@ -611,55 +611,55 @@ icon: 'shield-check'
 
 <div className="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 my-8">
 
-  <div className="bg-gradient-to-br from-blue-50 to-cyan-50 dark:from-blue-900/20 dark:to-cyan-900/20 p-6 rounded-xl border border-blue-200 dark:border-blue-800">
+  <div className="bg-gray-50">
     <div className="flex items-center gap-3 mb-4">
-      <div className="w-10 h-10 bg-blue-500 rounded-xl flex items-center justify-center">
-        <span className="text-white text-lg">📱</span>
+      <div className="w-10 h-10 bg-gray-500 rounded-xl flex items-center justify-center">
+        <span className="text-white text-lg"></span>
       </div>
       <h3 className="text-lg font-semibold text-slate-800 dark:text-slate-200">Trading Platforms</h3>
     </div>
     <div className="space-y-2 text-sm">
       <div className="flex items-center justify-between">
         <span className="text-slate-600 dark:text-slate-400">Think or Swim</span>
-        <span className="px-2 py-1 bg-blue-100 dark:bg-blue-900/30 text-blue-700 dark:text-blue-300 rounded text-xs">Advanced</span>
+        <span className="px-2 py-1 bg-gray-100 dark:bg-gray-900/30 text-gray-700 dark:text-gray-300 rounded text-xs">Advanced</span>
       </div>
       <div className="flex items-center justify-between">
         <span className="text-slate-600 dark:text-slate-400">Interactive Brokers</span>
-        <span className="px-2 py-1 bg-blue-100 dark:bg-blue-900/30 text-blue-700 dark:text-blue-300 rounded text-xs">Pro</span>
+        <span className="px-2 py-1 bg-gray-100 dark:bg-gray-900/30 text-gray-700 dark:text-gray-300 rounded text-xs">Pro</span>
       </div>
       <div className="flex items-center justify-between">
         <span className="text-slate-600 dark:text-slate-400">MetaTrader</span>
-        <span className="px-2 py-1 bg-blue-100 dark:bg-blue-900/30 text-blue-700 dark:text-blue-300 rounded text-xs">Popular</span>
+        <span className="px-2 py-1 bg-gray-100 dark:bg-gray-900/30 text-gray-700 dark:text-gray-300 rounded text-xs">Popular</span>
       </div>
     </div>
   </div>
 
-  <div className="bg-gradient-to-br from-emerald-50 to-teal-50 dark:from-emerald-900/20 dark:to-teal-900/20 p-6 rounded-xl border border-emerald-200 dark:border-emerald-800">
+  <div className="bg-gray-50">
     <div className="flex items-center gap-3 mb-4">
-      <div className="w-10 h-10 bg-emerald-500 rounded-xl flex items-center justify-center">
-        <span className="text-white text-lg">📊</span>
+      <div className="w-10 h-10 bg-gray-500 rounded-xl flex items-center justify-center">
+        <span className="text-white text-lg"></span>
       </div>
       <h3 className="text-lg font-semibold text-slate-800 dark:text-slate-200">Risk Calculators</h3>
     </div>
     <div className="space-y-2 text-sm">
       <div className="flex items-center justify-between">
         <span className="text-slate-600 dark:text-slate-400">Position Sizer Pro</span>
-        <span className="px-2 py-1 bg-emerald-100 dark:bg-emerald-900/30 text-emerald-700 dark:text-emerald-300 rounded text-xs">Mobile</span>
+        <span className="px-2 py-1 bg-gray-100 dark:bg-gray-900/30 text-gray-700 dark:text-gray-300 rounded text-xs">Mobile</span>
       </div>
       <div className="flex items-center justify-between">
         <span className="text-slate-600 dark:text-slate-400">Trade Risk Calculator</span>
-        <span className="px-2 py-1 bg-emerald-100 dark:bg-emerald-900/30 text-emerald-700 dark:text-emerald-300 rounded text-xs">Web</span>
+        <span className="px-2 py-1 bg-gray-100 dark:bg-gray-900/30 text-gray-700 dark:text-gray-300 rounded text-xs">Web</span>
       </div>
       <div className="flex items-center justify-between">
         <span className="text-slate-600 dark:text-slate-400">Excel Spreadsheets</span>
-        <span className="px-2 py-1 bg-emerald-100 dark:bg-emerald-900/30 text-emerald-700 dark:text-emerald-300 rounded text-xs">Custom</span>
+        <span className="px-2 py-1 bg-gray-100 dark:bg-gray-900/30 text-gray-700 dark:text-gray-300 rounded text-xs">Custom</span>
       </div>
     </div>
   </div>
 
-  <div className="bg-gradient-to-br from-purple-50 to-pink-50 dark:from-purple-900/20 dark:to-pink-900/20 p-6 rounded-xl border border-purple-200 dark:border-purple-800">
+  <div className="bg-gray-50">
     <div className="flex items-center gap-3 mb-4">
-      <div className="w-10 h-10 bg-purple-500 rounded-xl flex items-center justify-center">
+      <div className="w-10 h-10 bg-gray-500 rounded-xl flex items-center justify-center">
         <span className="text-white text-lg">🤖</span>
       </div>
       <h3 className="text-lg font-semibold text-slate-800 dark:text-slate-200">Automated Tools</h3>
@@ -667,15 +667,15 @@ icon: 'shield-check'
     <div className="space-y-2 text-sm">
       <div className="flex items-center justify-between">
         <span className="text-slate-600 dark:text-slate-400">Stop Loss Orders</span>
-        <span className="px-2 py-1 bg-purple-100 dark:bg-purple-900/30 text-purple-700 dark:text-purple-300 rounded text-xs">Essential</span>
+        <span className="px-2 py-1 bg-gray-100 dark:bg-gray-900/30 text-gray-700 dark:text-gray-300 rounded text-xs">Essential</span>
       </div>
       <div className="flex items-center justify-between">
         <span className="text-slate-600 dark:text-slate-400">Bracket Orders</span>
-        <span className="px-2 py-1 bg-purple-100 dark:bg-purple-900/30 text-purple-700 dark:text-purple-300 rounded text-xs">Advanced</span>
+        <span className="px-2 py-1 bg-gray-100 dark:bg-gray-900/30 text-gray-700 dark:text-gray-300 rounded text-xs">Advanced</span>
       </div>
       <div className="flex items-center justify-between">
         <span className="text-slate-600 dark:text-slate-400">Trailing Stops</span>
-        <span className="px-2 py-1 bg-purple-100 dark:bg-purple-900/30 text-purple-700 dark:text-purple-300 rounded text-xs">Dynamic</span>
+        <span className="px-2 py-1 bg-gray-100 dark:bg-gray-900/30 text-gray-700 dark:text-gray-300 rounded text-xs">Dynamic</span>
       </div>
     </div>
   </div>
@@ -686,9 +686,9 @@ icon: 'shield-check'
 
 <div className="space-y-6 my-8">
 
-  <div className="bg-gradient-to-r from-red-50 to-orange-50 dark:from-red-900/20 dark:to-orange-900/20 p-6 rounded-xl border border-red-200 dark:border-red-800">
+  <div className="bg-gradient-to-r bg-gray-50 dark:bg-gray-900/20 p-6 rounded-xl border border-gray-200 dark:border-gray-800">
     <div className="flex items-start gap-4">
-      <div className="w-12 h-12 bg-red-500 rounded-xl flex items-center justify-center flex-shrink-0">
+      <div className="w-12 h-12 bg-gray-500 rounded-xl flex items-center justify-center flex-shrink-0">
         <span className="text-white text-xl">❌</span>
       </div>
       <div>
@@ -697,17 +697,17 @@ icon: 'shield-check'
           Using too much capital per trade or excessive margin, leading to large losses that can wipe out accounts.
         </p>
         <div className="flex flex-wrap gap-2">
-          <span className="px-3 py-1 bg-red-100 dark:bg-red-900/30 text-red-700 dark:text-red-300 rounded-full text-xs">Solution: 1-2% risk per trade</span>
-          <span className="px-3 py-1 bg-red-100 dark:bg-red-900/30 text-red-700 dark:text-red-300 rounded-full text-xs">Use position sizing formulas</span>
+          <span className="px-3 py-1 bg-gray-100 dark:bg-gray-900/30 text-gray-700 dark:text-gray-300 rounded-full text-xs">Solution: 1-2% risk per trade</span>
+          <span className="px-3 py-1 bg-gray-100 dark:bg-gray-900/30 text-gray-700 dark:text-gray-300 rounded-full text-xs">Use position sizing formulas</span>
         </div>
       </div>
     </div>
   </div>
 
-  <div className="bg-gradient-to-r from-orange-50 to-yellow-50 dark:from-orange-900/20 dark:to-yellow-900/20 p-6 rounded-xl border border-orange-200 dark:border-orange-800">
+  <div className="bg-gradient-to-r bg-gray-50 dark:bg-gray-900/20 p-6 rounded-xl border border-gray-200 dark:border-gray-800">
     <div className="flex items-start gap-4">
-      <div className="w-12 h-12 bg-orange-500 rounded-xl flex items-center justify-center flex-shrink-0">
-        <span className="text-white text-xl">🎯</span>
+      <div className="w-12 h-12 bg-gray-500 rounded-xl flex items-center justify-center flex-shrink-0">
+        <span className="text-white text-xl"></span>
       </div>
       <div>
         <h3 className="text-lg font-semibold text-slate-800 dark:text-slate-200 mb-2">No Stop Losses</h3>
@@ -715,17 +715,17 @@ icon: 'shield-check'
           Failing to set stop losses or moving them further away when trades go against you.
         </p>
         <div className="flex flex-wrap gap-2">
-          <span className="px-3 py-1 bg-orange-100 dark:bg-orange-900/30 text-orange-700 dark:text-orange-300 rounded-full text-xs">Always set stops before entry</span>
-          <span className="px-3 py-1 bg-orange-100 dark:bg-orange-900/30 text-orange-700 dark:text-orange-300 rounded-full text-xs">Never move stops against you</span>
+          <span className="px-3 py-1 bg-gray-100 dark:bg-gray-900/30 text-gray-700 dark:text-gray-300 rounded-full text-xs">Always set stops before entry</span>
+          <span className="px-3 py-1 bg-gray-100 dark:bg-gray-900/30 text-gray-700 dark:text-gray-300 rounded-full text-xs">Never move stops against you</span>
         </div>
       </div>
     </div>
   </div>
 
-  <div className="bg-gradient-to-r from-purple-50 to-pink-50 dark:from-purple-900/20 dark:to-pink-900/20 p-6 rounded-xl border border-purple-200 dark:border-purple-800">
+  <div className="bg-gradient-to-r bg-gray-50 dark:bg-gray-900/20 p-6 rounded-xl border border-gray-200 dark:border-gray-800">
     <div className="flex items-start gap-4">
-      <div className="w-12 h-12 bg-purple-500 rounded-xl flex items-center justify-center flex-shrink-0">
-        <span className="text-white text-xl">🔄</span>
+      <div className="w-12 h-12 bg-gray-500 rounded-xl flex items-center justify-center flex-shrink-0">
+        <span className="text-white text-xl"></span>
       </div>
       <div>
         <h3 className="text-lg font-semibold text-slate-800 dark:text-slate-200 mb-2">Emotional Decision Making</h3>
@@ -733,8 +733,8 @@ icon: 'shield-check'
           Letting fear and greed drive trading decisions instead of following predetermined rules.
         </p>
         <div className="flex flex-wrap gap-2">
-          <span className="px-3 py-1 bg-purple-100 dark:bg-purple-900/30 text-purple-700 dark:text-purple-300 rounded-full text-xs">Follow your trading plan</span>
-          <span className="px-3 py-1 bg-purple-100 dark:bg-purple-900/30 text-purple-700 dark:text-purple-300 rounded-full text-xs">Use mechanical systems</span>
+          <span className="px-3 py-1 bg-gray-100 dark:bg-gray-900/30 text-gray-700 dark:text-gray-300 rounded-full text-xs">Follow your trading plan</span>
+          <span className="px-3 py-1 bg-gray-100 dark:bg-gray-900/30 text-gray-700 dark:text-gray-300 rounded-full text-xs">Use mechanical systems</span>
         </div>
       </div>
     </div>
@@ -750,7 +750,7 @@ icon: 'shield-check'
 
 ## Risk Management Checklist
 
-<div className="bg-gradient-to-br from-green-50 to-emerald-50 dark:from-green-900/20 dark:to-emerald-900/20 p-6 rounded-xl border border-green-200 dark:border-green-800 my-8">
+<div className="bg-gray-50">
   <h3 className="text-xl font-bold text-slate-800 dark:text-slate-200 mb-4">Pre-Trade Checklist</h3>
 
   <div className="grid grid-cols-1 md:grid-cols-2 gap-6">
@@ -758,23 +758,23 @@ icon: 'shield-check'
       <h4 className="font-semibold text-slate-700 dark:text-slate-300 mb-3">Before Every Trade</h4>
       <div className="space-y-2">
         <label className="flex items-center gap-3 cursor-pointer">
-          <input type="checkbox" className="w-4 h-4 text-green-600 rounded"/>
+          <input type="checkbox" className="w-4 h-4 text-gray-600 rounded"/>
           <span className="text-sm text-slate-600 dark:text-slate-400">Position size calculated</span>
         </label>
         <label className="flex items-center gap-3 cursor-pointer">
-          <input type="checkbox" className="w-4 h-4 text-green-600 rounded"/>
+          <input type="checkbox" className="w-4 h-4 text-gray-600 rounded"/>
           <span className="text-sm text-slate-600 dark:text-slate-400">Stop loss level determined</span>
         </label>
         <label className="flex items-center gap-3 cursor-pointer">
-          <input type="checkbox" className="w-4 h-4 text-green-600 rounded"/>
+          <input type="checkbox" className="w-4 h-4 text-gray-600 rounded"/>
           <span className="text-sm text-slate-600 dark:text-slate-400">Take profit targets set</span>
         </label>
         <label className="flex items-center gap-3 cursor-pointer">
-          <input type="checkbox" className="w-4 h-4 text-green-600 rounded"/>
+          <input type="checkbox" className="w-4 h-4 text-gray-600 rounded"/>
           <span className="text-sm text-slate-600 dark:text-slate-400">Risk-reward ratio ≥ 1:1</span>
         </label>
         <label className="flex items-center gap-3 cursor-pointer">
-          <input type="checkbox" className="w-4 h-4 text-green-600 rounded"/>
+          <input type="checkbox" className="w-4 h-4 text-gray-600 rounded"/>
           <span className="text-sm text-slate-600 dark:text-slate-400">Portfolio heat under limit</span>
         </label>
       </div>
@@ -784,23 +784,23 @@ icon: 'shield-check'
       <h4 className="font-semibold text-slate-700 dark:text-slate-300 mb-3">Daily Review</h4>
       <div className="space-y-2">
         <label className="flex items-center gap-3 cursor-pointer">
-          <input type="checkbox" className="w-4 h-4 text-green-600 rounded"/>
+          <input type="checkbox" className="w-4 h-4 text-gray-600 rounded"/>
           <span className="text-sm text-slate-600 dark:text-slate-400">Review all open positions</span>
         </label>
         <label className="flex items-center gap-3 cursor-pointer">
-          <input type="checkbox" className="w-4 h-4 text-green-600 rounded"/>
+          <input type="checkbox" className="w-4 h-4 text-gray-600 rounded"/>
           <span className="text-sm text-slate-600 dark:text-slate-400">Check portfolio correlation</span>
         </label>
         <label className="flex items-center gap-3 cursor-pointer">
-          <input type="checkbox" className="w-4 h-4 text-green-600 rounded"/>
+          <input type="checkbox" className="w-4 h-4 text-gray-600 rounded"/>
           <span className="text-sm text-slate-600 dark:text-slate-400">Update trailing stops</span>
         </label>
         <label className="flex items-center gap-3 cursor-pointer">
-          <input type="checkbox" className="w-4 h-4 text-green-600 rounded"/>
+          <input type="checkbox" className="w-4 h-4 text-gray-600 rounded"/>
           <span className="text-sm text-slate-600 dark:text-slate-400">Record trade performance</span>
         </label>
         <label className="flex items-center gap-3 cursor-pointer">
-          <input type="checkbox" className="w-4 h-4 text-green-600 rounded"/>
+          <input type="checkbox" className="w-4 h-4 text-gray-600 rounded"/>
           <span className="text-sm text-slate-600 dark:text-slate-400">Review risk metrics</span>
         </label>
       </div>
