--- a/trading/market-fundamentals.mdx
+++ b/trading/market-fundamentals.mdx
@@ -13,77 +13,77 @@ icon: 'chart-line'
 
 ## Market Sectors Performance (YTD)
 
-<div className="bg-gradient-to-br from-slate-50 to-gray-100 dark:from-slate-900 dark:to-gray-800 rounded-xl border border-slate-200 dark:border-slate-700 overflow-hidden my-8">
+<div className="bg-gray-50">
   <div className="border-b border-slate-200 dark:border-slate-700 bg-white/50 dark:bg-slate-800/50">
     <div className="flex">
-      <button className="flex-1 px-6 py-4 text-sm font-medium text-indigo-600 dark:text-indigo-400 bg-indigo-50 dark:bg-indigo-900/30 border-b-2 border-indigo-500">
-        🏆 Best Performers
+      <button className="flex-1 px-6 py-4 text-sm font-medium text-gray-600 dark:text-gray-400 bg-gray-50 dark:bg-gray-900/30 border-b-2 border-gray-500">
+        Best Performers
       </button>
       <button className="flex-1 px-6 py-4 text-sm font-medium text-slate-600 dark:text-slate-400 hover:bg-slate-50 dark:hover:bg-slate-800/50">
-        📉 Laggards
+        Laggards
       </button>
     </div>
   </div>
 
   <div className="p-6">
     <div className="space-y-4">
-      <div className="flex items-center justify-between p-4 bg-emerald-50 dark:bg-emerald-900/20 rounded-lg border border-emerald-200 dark:border-emerald-800">
+      <div className="flex items-center justify-between p-4 bg-gray-50 dark:bg-gray-900/20 rounded-lg border border-gray-200 dark:border-gray-800">
         <div className="flex items-center gap-3">
-          <div className="w-10 h-10 bg-emerald-500 rounded-lg flex items-center justify-center">
+          <div className="w-10 h-10 bg-gray-500 rounded-lg flex items-center justify-center">
             <span className="text-white text-sm font-bold">T</span>
           </div>
           <div>
-            <div className="font-semibold text-emerald-900 dark:text-emerald-100">Technology</div>
-            <div className="text-sm text-emerald-700 dark:text-emerald-300">AI Revolution, Cloud Growth</div>
+            <div className="font-semibold text-gray-900 dark:text-gray-100">Technology</div>
+            <div className="text-sm text-gray-700 dark:text-gray-300">AI Revolution, Cloud Growth</div>
           </div>
         </div>
         <div className="text-right">
-          <div className="text-xl font-bold text-emerald-600 dark:text-emerald-400">+28.5%</div>
+          <div className="text-xl font-bold text-gray-600 dark:text-gray-400">+28.5%</div>
         </div>
       </div>
 
-      <div className="flex items-center justify-between p-4 bg-blue-50 dark:bg-blue-900/20 rounded-lg border border-blue-200 dark:border-blue-800">
+      <div className="flex items-center justify-between p-4 bg-gray-50 dark:bg-gray-900/20 rounded-lg border border-gray-200 dark:border-gray-800">
         <div className="flex items-center gap-3">
-          <div className="w-10 h-10 bg-blue-500 rounded-lg flex items-center justify-center">
+          <div className="w-10 h-10 bg-gray-500 rounded-lg flex items-center justify-center">
             <span className="text-white text-sm font-bold">C</span>
           </div>
           <div>
-            <div className="font-semibold text-blue-900 dark:text-blue-100">Communication</div>
-            <div className="text-sm text-blue-700 dark:text-blue-300">5G Expansion, Streaming</div>
+            <div className="font-semibold text-gray-900 dark:text-gray-100">Communication</div>
+            <div className="text-sm text-gray-700 dark:text-gray-300">5G Expansion, Streaming</div>
           </div>
         </div>
         <div className="text-right">
-          <div className="text-xl font-bold text-blue-600 dark:text-blue-400">+22.1%</div>
+          <div className="text-xl font-bold text-gray-600 dark:text-gray-400">+22.1%</div>
         </div>
       </div>
 
-      <div className="flex items-center justify-between p-4 bg-purple-50 dark:bg-purple-900/20 rounded-lg border border-purple-200 dark:border-purple-800">
+      <div className="flex items-center justify-between p-4 bg-gray-50 dark:bg-gray-900/20 rounded-lg border border-gray-200 dark:border-gray-800">
         <div className="flex items-center gap-3">
-          <div className="w-10 h-10 bg-purple-500 rounded-lg flex items-center justify-center">
+          <div className="w-10 h-10 bg-gray-500 rounded-lg flex items-center justify-center">
             <span className="text-white text-sm font-bold">CD</span>
           </div>
           <div>
-            <div className="font-semibold text-purple-900 dark:text-purple-100">Consumer Discretionary</div>
-            <div className="text-sm text-purple-700 dark:text-purple-300">Economic Recovery</div>
+            <div className="font-semibold text-gray-900 dark:text-gray-100">Consumer Discretionary</div>
+            <div className="text-sm text-gray-700 dark:text-gray-300">Economic Recovery</div>
           </div>
         </div>
         <div className="text-right">
-          <div className="text-xl font-bold text-purple-600 dark:text-purple-400">+18.7%</div>
+          <div className="text-xl font-bold text-gray-600 dark:text-gray-400">+18.7%</div>
         </div>
       </div>
 
-      <div className="flex items-center justify-between p-4 bg-amber-50 dark:bg-amber-900/20 rounded-lg border border-amber-200 dark:border-amber-800">
+      <div className="flex items-center justify-between p-4 bg-gray-50 dark:bg-gray-900/20 rounded-lg border border-gray-200 dark:border-gray-800">
         <div className="flex items-center gap-3">
-          <div className="w-10 h-10 bg-amber-500 rounded-lg flex items-center justify-center">
+          <div className="w-10 h-10 bg-gray-500 rounded-lg flex items-center justify-center">
             <span className="text-white text-sm font-bold">F</span>
           </div>
           <div>
-            <div className="font-semibold text-amber-900 dark:text-amber-100">Financials</div>
-            <div className="text-sm text-amber-700 dark:text-amber-300">Rising Interest Rates</div>
+            <div className="font-semibold text-gray-900 dark:text-gray-100">Financials</div>
+            <div className="text-sm text-gray-700 dark:text-gray-300">Rising Interest Rates</div>
           </div>
         </div>
         <div className="text-right">
-          <div className="text-xl font-bold text-amber-600 dark:text-amber-400">+15.3%</div>
+          <div className="text-xl font-bold text-gray-600 dark:text-gray-400">+15.3%</div>
         </div>
       </div>
     </div>
@@ -95,7 +95,7 @@ icon: 'chart-line'
 <div className="my-8">
   <h3 className="text-lg font-semibold text-slate-800 dark:text-slate-200 mb-4">Daily Trading Patterns</h3>
 
-  <div className="bg-gradient-to-r from-indigo-50 to-purple-50 dark:from-indigo-900/20 dark:to-purple-900/20 p-6 rounded-xl border border-indigo-200 dark:border-indigo-800">
+  <div className="bg-gradient-to-r bg-gray-50 dark:bg-gray-900/20 p-6 rounded-xl border border-gray-200 dark:border-gray-800">
     <div className="relative">
       {/* Mermaid chart representation with modern styling */}
       <div className="flex items-end justify-between h-32 space-x-2">
@@ -134,7 +134,7 @@ icon: 'chart-line'
 
     <div className="mt-6 grid grid-cols-2 md:grid-cols-3 gap-4 text-sm">
       <div className="flex items-center gap-2">
-        <div className="w-3 h-3 bg-indigo-500 rounded"></div>
+        <div className="w-3 h-3 bg-gray-500 rounded"></div>
         <span className="text-slate-700 dark:text-slate-300">High Volume Periods</span>
       </div>
       <div className="flex items-center gap-2">
@@ -142,7 +142,7 @@ icon: 'chart-line'
         <span className="text-slate-700 dark:text-slate-300">Low Volume Periods</span>
       </div>
       <div className="flex items-center gap-2">
-        <div className="w-3 h-3 bg-emerald-500 rounded"></div>
+        <div className="w-3 h-3 bg-gray-500 rounded"></div>
         <span className="text-slate-700 dark:text-slate-300">Moderate Volume</span>
       </div>
     </div>
@@ -157,43 +157,43 @@ icon: 'chart-line'
 
     <div className="space-y-8">
       <div className="flex gap-6">
-        <div className="w-8 h-8 bg-red-500 rounded-full flex items-center justify-center flex-shrink-0 relative z-10">
+        <div className="w-8 h-8 bg-gray-500 rounded-full flex items-center justify-center flex-shrink-0 relative z-10">
           <svg className="w-4 h-4 text-white" fill="currentColor" viewBox="0 0 20 20">
             <path fillRule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM9.555 7.168A1 1 0 008 8v4a1 1 0 001.555.832l3-2a1 1 0 000-1.664l-3-2z" clipRule="evenodd" />
           </svg>
         </div>
-        <div className="flex-1 bg-red-50 dark:bg-red-900/20 border border-red-200 dark:border-red-800 rounded-xl p-6">
-          <h4 className="font-bold text-red-800 dark:text-red-200 mb-2">Priority #1: Emergency Fund (Month 1-3)</h4>
-          <p className="text-red-700 dark:text-red-300 mb-3">Save 3-6 months of expenses in high-yield savings account (4-5% APY)</p>
+        <div className="flex-1 bg-gray-50 dark:bg-gray-900/20 border border-gray-200 dark:border-gray-800 rounded-xl p-6">
+          <h4 className="font-bold text-gray-800 dark:text-gray-200 mb-2">Priority #1: Emergency Fund (Month 1-3)</h4>
+          <p className="text-gray-700 dark:text-gray-300 mb-3">Save 3-6 months of expenses in high-yield savings account (4-5% APY)</p>
           <div className="bg-white/70 dark:bg-slate-800/70 p-3 rounded-lg">
-            <span className="font-semibold text-red-900 dark:text-red-100">Recommended Amount:</span>
-            <span className="text-red-700 dark:text-red-300"> $15,000 - $30,000 for most individuals</span>
+            <span className="font-semibold text-gray-900 dark:text-gray-100">Recommended Amount:</span>
+            <span className="text-gray-700 dark:text-gray-300"> $15,000 - $30,000 for most individuals</span>
           </div>
         </div>
       </div>
 
       <div className="flex gap-6">
-        <div className="w-8 h-8 bg-amber-500 rounded-full flex items-center justify-center flex-shrink-0 relative z-10">
+        <div className="w-8 h-8 bg-gray-500 rounded-full flex items-center justify-center flex-shrink-0 relative z-10">
           <svg className="w-4 h-4 text-white" fill="currentColor" viewBox="0 0 20 20">
             <path d="M4 4a2 2 0 00-2 2v1h16V6a2 2 0 00-2-2H4z" />
             <path fillRule="evenodd" d="M18 9H2v5a2 2 0 002 2h12a2 2 0 002-2V9zM4 13a1 1 0 011-1h1a1 1 0 110 2H5a1 1 0 01-1-1zm5-1a1 1 0 100 2h1a1 1 0 100-2H9z" clipRule="evenodd" />
           </svg>
         </div>
-        <div className="flex-1 bg-amber-50 dark:bg-amber-900/20 border border-amber-200 dark:border-amber-800 rounded-xl p-6">
-          <h4 className="font-bold text-amber-800 dark:text-amber-200 mb-2">Priority #2: High-Interest Debt (Month 1-6)</h4>
-          <p className="text-amber-700 dark:text-amber-300">Pay off credit cards (18-25% interest) before investing in stocks (8-10% expected)</p>
+        <div className="flex-1 bg-gray-50 dark:bg-gray-900/20 border border-gray-200 dark:border-gray-800 rounded-xl p-6">
+          <h4 className="font-bold text-gray-800 dark:text-gray-200 mb-2">Priority #2: High-Interest Debt (Month 1-6)</h4>
+          <p className="text-gray-700 dark:text-gray-300">Pay off credit cards (18-25% interest) before investing in stocks (8-10% expected)</p>
         </div>
       </div>
 
       <div className="flex gap-6">
-        <div className="w-8 h-8 bg-emerald-500 rounded-full flex items-center justify-center flex-shrink-0 relative z-10">
+        <div className="w-8 h-8 bg-gray-500 rounded-full flex items-center justify-center flex-shrink-0 relative z-10">
           <svg className="w-4 h-4 text-white" fill="currentColor" viewBox="0 0 20 20">
             <path fillRule="evenodd" d="M12 7a1 1 0 110-2h5a1 1 0 011 1v5a1 1 0 11-2 0V8.414l-4.293 4.293a1 1 0 01-1.414 0L8 10.414l-4.293 4.293a1 1 0 01-1.414-1.414l5-5a1 1 0 011.414 0L11 10.586 14.586 7H12z" clipRule="evenodd" />
           </svg>
         </div>
-        <div className="flex-1 bg-emerald-50 dark:bg-emerald-900/20 border border-emerald-200 dark:border-emerald-800 rounded-xl p-6">
-          <h4 className="font-bold text-emerald-800 dark:text-emerald-200 mb-2">Priority #3: Begin Investing (Month 6+)</h4>
-          <p className="text-emerald-700 dark:text-emerald-300">Start with broad market index funds, then gradually learn individual stock analysis</p>
+        <div className="flex-1 bg-gray-50 dark:bg-gray-900/20 border border-gray-200 dark:border-gray-800 rounded-xl p-6">
+          <h4 className="font-bold text-gray-800 dark:text-gray-200 mb-2">Priority #3: Begin Investing (Month 6+)</h4>
+          <p className="text-gray-700 dark:text-gray-300">Start with broad market index funds, then gradually learn individual stock analysis</p>
         </div>
       </div>
     </div>
@@ -203,7 +203,7 @@ icon: 'chart-line'
 ## Risk vs Return Spectrum
 
 <div className="my-8">
-  <div className="bg-gradient-to-r from-red-50 via-amber-50 to-emerald-50 dark:from-red-900/20 dark:via-amber-900/20 dark:to-emerald-900/20 p-8 rounded-xl border border-slate-200 dark:border-slate-700">
+  <div className="bg-gradient-to-r bg-gray-50 dark:bg-gray-900/20 p-8 rounded-xl border border-slate-200 dark:border-slate-700">
     <h3 className="text-center font-bold text-xl text-slate-800 dark:text-slate-200 mb-6">Investment Risk-Return Profile</h3>
 
     <div className="flex justify-between items-end h-40 mb-6">
@@ -231,27 +231,27 @@ icon: 'chart-line'
 
     <div className="flex justify-between items-center text-sm text-slate-600 dark:text-slate-400">
       <span className="flex items-center gap-2">
-        <div className="w-3 h-3 bg-emerald-500 rounded-full"></div>
+        <div className="w-3 h-3 bg-gray-500 rounded-full"></div>
         Lower Risk
       </span>
       <span className="flex items-center gap-2">
         Higher Risk
-        <div className="w-3 h-3 bg-red-500 rounded-full"></div>
+        <div className="w-3 h-3 bg-gray-500 rounded-full"></div>
       </span>
     </div>
   </div>
 </div>
 
-<div className="bg-amber-50 dark:bg-amber-900/20 border border-amber-200 dark:border-amber-800 rounded-xl p-6 my-8">
+<div className="bg-gray-50 dark:bg-gray-900/20 border border-gray-200 dark:border-gray-800 rounded-xl p-6 my-8">
   <div className="flex items-start gap-4">
-    <div className="w-8 h-8 bg-amber-500 rounded-full flex items-center justify-center flex-shrink-0">
+    <div className="w-8 h-8 bg-gray-500 rounded-full flex items-center justify-center flex-shrink-0">
       <svg className="w-4 h-4 text-white" fill="currentColor" viewBox="0 0 20 20">
         <path fillRule="evenodd" d="M8.257 3.099c.765-1.36 2.722-1.36 3.486 0l5.58 9.92c.75 1.334-.213 2.98-1.742 2.98H4.42c-1.53 0-2.493-1.646-1.743-2.98l5.58-9.92zM11 13a1 1 0 11-2 0 1 1 0 012 0zm-1-8a1 1 0 00-1 1v3a1 1 0 002 0V6a1 1 0 00-1-1z" clipRule="evenodd" />
       </svg>
     </div>
     <div>
-      <h4 className="font-semibold text-amber-800 dark:text-amber-200 mb-2">Remember</h4>
-      <p className="text-amber-700 dark:text-amber-300">
+      <h4 className="font-semibold text-gray-800 dark:text-gray-200 mb-2">Remember</h4>
+      <p className="text-gray-700 dark:text-gray-300">
         Higher potential returns always come with higher risk. Never invest more than you can afford to lose.
       </p>
     </div>
